// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PRNG determinism snapshots > createRng with string seed produces consistent values 1`] = `
[
  0.9621718444650199,
  0.9882833954902074,
  0.508145359009914,
  0.1309058800870826,
  0.5397453017146312,
  0.6228422794835776,
  0.6742496751714249,
  0.24430207897061607,
  0.32641673006893457,
  0.8930601282107292,
]
`;

exports[`SVG snapshots > aliens theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#0a0a23"/>
    <g>
    
    
        <ellipse cx="50" cy="45" rx="28" ry="32" fill="#7ed321"/>
        <ellipse cx="50" cy="70" rx="12" ry="16" fill="#7ed321"/>
        <ellipse cx="50" cy="42" rx="24" ry="26" fill="#92e735" opacity="0.3"/>
      
    
    
        <ellipse cx="38" cy="48" rx="10" ry="14" fill="#1a1a2e"/>
        <ellipse cx="62" cy="48" rx="10" ry="14" fill="#1a1a2e"/>
        <ellipse cx="36" cy="44" rx="3" ry="5" fill="#424256" opacity="0.6"/>
        <ellipse cx="60" cy="44" rx="3" ry="5" fill="#424256" opacity="0.6"/>
      
    <line x1="44" y1="68" x2="56" y2="68" stroke="#56ab00" stroke-width="2" stroke-linecap="round"/>
  </g>
  </svg>"
`;

exports[`SVG snapshots > aliens theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#0f3460"/>
    <g>
    
    
        <ellipse cx="50" cy="40" rx="28" ry="24" fill="#4a9c2d"/>
        <ellipse cx="50" cy="36" rx="22" ry="18" fill="#5eb041" opacity="0.2"/>
        <path d="M28,52 Q24,70 28,80" stroke="#4a9c2d" stroke-width="6" fill="none" stroke-linecap="round"/>
        <path d="M40,56 Q37,74 40,84" stroke="#4a9c2d" stroke-width="6" fill="none" stroke-linecap="round"/>
        <path d="M50,58 Q50,76 50,86" stroke="#4a9c2d" stroke-width="6" fill="none" stroke-linecap="round"/>
        <path d="M60,56 Q63,74 60,84" stroke="#4a9c2d" stroke-width="6" fill="none" stroke-linecap="round"/>
        <path d="M72,52 Q76,70 72,80" stroke="#4a9c2d" stroke-width="6" fill="none" stroke-linecap="round"/>
      
    
        <pattern id="scales" width="8" height="8" patternUnits="userSpaceOnUse">
          <path d="M0,4 Q4,0 8,4 Q4,8 0,4" fill="#318314" opacity="0.2"/>
        </pattern>
        <ellipse cx="50" cy="50" rx="24" ry="28" fill="url(#scales)"/>
      
    
        <ellipse cx="34" cy="50" rx="7" ry="10" fill="#1a1a2e"/>
        <ellipse cx="50" cy="44" rx="8" ry="11" fill="#1a1a2e"/>
        <ellipse cx="66" cy="50" rx="7" ry="10" fill="#1a1a2e"/>
        <ellipse cx="32" cy="47" rx="2" ry="3" fill="#424256" opacity="0.6"/>
        <ellipse cx="48" cy="41" rx="2" ry="3" fill="#424256" opacity="0.6"/>
        <ellipse cx="64" cy="47" rx="2" ry="3" fill="#424256" opacity="0.6"/>
      
    
        <path d="M42,66 Q40,74 38,78" stroke="#4a9c2d" stroke-width="2.5" fill="none" stroke-linecap="round"/>
        <path d="M47,68 Q46,76 44,82" stroke="#4a9c2d" stroke-width="2.5" fill="none" stroke-linecap="round"/>
        <path d="M53,68 Q54,76 56,82" stroke="#4a9c2d" stroke-width="2.5" fill="none" stroke-linecap="round"/>
        <path d="M58,66 Q60,74 62,78" stroke="#4a9c2d" stroke-width="2.5" fill="none" stroke-linecap="round"/>
      
  </g>
  </svg>"
`;

exports[`SVG snapshots > aliens theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#0a0a23"/>
    <g>
    
    
        <ellipse cx="50" cy="45" rx="28" ry="32" fill="#7f8c8d"/>
        <ellipse cx="50" cy="70" rx="12" ry="16" fill="#7f8c8d"/>
        <ellipse cx="50" cy="42" rx="24" ry="26" fill="#93a0a1" opacity="0.3"/>
      
    
        <pattern id="scales" width="8" height="8" patternUnits="userSpaceOnUse">
          <path d="M0,4 Q4,0 8,4 Q4,8 0,4" fill="#667374" opacity="0.2"/>
        </pattern>
        <ellipse cx="50" cy="50" rx="24" ry="28" fill="url(#scales)"/>
      
    
        <ellipse cx="34" cy="50" rx="7" ry="10" fill="#f1c40f"/>
        <ellipse cx="50" cy="44" rx="8" ry="11" fill="#f1c40f"/>
        <ellipse cx="66" cy="50" rx="7" ry="10" fill="#f1c40f"/>
        <ellipse cx="32" cy="47" rx="2" ry="3" fill="#ffec37" opacity="0.6"/>
        <ellipse cx="48" cy="41" rx="2" ry="3" fill="#ffec37" opacity="0.6"/>
        <ellipse cx="64" cy="47" rx="2" ry="3" fill="#ffec37" opacity="0.6"/>
      
    
  </g>
  </svg>"
`;

exports[`SVG snapshots > animals theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#ecf0f1"/>
    <g><g transform="translate(50, 50) scale(0.85) translate(-50, -50)">
    <polygon points="18,39 25,9 40,34" fill="#e67e22"/>
    <polygon points="22,36 27,16 37,34" fill="#ffa64a"/>
    <polygon points="82,39 75,9 60,34" fill="#e67e22"/>
    <polygon points="78,36 73,16 63,34" fill="#ffa64a"/>
  
    <ellipse cx="50" cy="55" rx="38" ry="35" fill="#e67e22"/>
    <ellipse cx="50" cy="60" rx="25" ry="22" fill="#ffffff"/>
  
        <ellipse cx="35" cy="50" rx="8" ry="9" fill="#2ecc71"/>
        <ellipse cx="65" cy="50" rx="8" ry="9" fill="#2ecc71"/>
        <ellipse cx="35" cy="51" rx="4" ry="6" fill="#2c3e50"/>
        <ellipse cx="65" cy="51" rx="4" ry="6" fill="#2c3e50"/>
        <circle cx="33" cy="48" r="2" fill="white"/>
        <circle cx="63" cy="48" r="2" fill="white"/>
      
    <ellipse cx="50" cy="65" rx="5" ry="4" fill="#c86004"/>
    <path d="M50,69 L50,74" stroke="#c86004" stroke-width="2"/>
    <path d="M45,76 Q50,80 55,76" stroke="#c86004" stroke-width="2" fill="none"/>
  
    <line x1="10" y1="60" x2="30" y2="65" stroke="#c86004" stroke-width="1.5"/>
    <line x1="10" y1="70" x2="30" y2="70" stroke="#c86004" stroke-width="1.5"/>
    <line x1="10" y1="80" x2="30" y2="75" stroke="#c86004" stroke-width="1.5"/>
    <line x1="90" y1="60" x2="70" y2="65" stroke="#c86004" stroke-width="1.5"/>
    <line x1="90" y1="70" x2="70" y2="70" stroke="#c86004" stroke-width="1.5"/>
    <line x1="90" y1="80" x2="70" y2="75" stroke="#c86004" stroke-width="1.5"/>
  </g></g>
  </svg>"
`;

exports[`SVG snapshots > animals theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#6dd7df"/>
    <g><g transform="translate(50, 50) scale(0.85) translate(-50, -50)">
    <ellipse cx="20" cy="45" rx="15" ry="25" fill="#c7009d"/>
    <ellipse cx="80" cy="45" rx="15" ry="25" fill="#c7009d"/>
  
    <circle cx="50" cy="50" r="35" fill="#e515bb"/>
    <ellipse cx="50" cy="65" rx="20" ry="18" fill="#ffffff"/>
  
        <circle cx="35" cy="43" r="10" fill="white"/>
        <circle cx="65" cy="43" r="10" fill="white"/>
        <circle cx="35" cy="43" r="6" fill="#68f3b4"/>
        <circle cx="65" cy="43" r="6" fill="#68f3b4"/>
        <circle cx="35" cy="43" r="3" fill="#2c3e50"/>
        <circle cx="65" cy="43" r="3" fill="#2c3e50"/>
      
    <ellipse cx="50" cy="62" rx="8" ry="6" fill="#2c3e50"/>
    <ellipse cx="48" cy="60" rx="2" ry="1.5" fill="#555"/>
    <path d="M50,68 L50,72" stroke="#2c3e50" stroke-width="2"/>
    <path d="M40,75 Q50,82 60,75" stroke="#2c3e50" stroke-width="2" fill="none"/>
  </g></g>
  </svg>"
`;

exports[`SVG snapshots > animals theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#b99f2d"/>
    <g><g transform="translate(50, 50) scale(0.85) translate(-50, -50)">
    <polygon points="18,52 32,10 46,50" fill="#c6a953"/>
    <polygon points="24,50 32,22 42,48" fill="#ffffff"/>
    <polygon points="82,52 68,10 54,50" fill="#c6a953"/>
    <polygon points="76,50 68,22 58,48" fill="#ffffff"/>
  
    <path d="M20 62 C22 36 38 22 50 22 C62 22 78 36 80 62 L50 92 Z" fill="#c6a953"/>
    <path d="M50 88 Q30 74 28 60 Q50 48 72 60 Q70 74 50 88 Z" fill="#ffffff"/>
  
        <ellipse cx="36" cy="50" rx="7" ry="8" fill="#e65156"/>
        <ellipse cx="64" cy="50" rx="7" ry="8" fill="#e65156"/>
        <ellipse cx="36" cy="51" rx="3" ry="5" fill="#2c3e50"/>
        <ellipse cx="64" cy="51" rx="3" ry="5" fill="#2c3e50"/>
        <circle cx="34" cy="48" r="1.5" fill="white"/>
        <circle cx="62" cy="48" r="1.5" fill="white"/>
      
    <polygon points="50,66 46,72 54,72" fill="#2c3e50"/>
    <path d="M50,72 L50,76" stroke="#2c3e50" stroke-width="2"/>
    <path d="M44,78 Q50,82 56,78" stroke="#2c3e50" stroke-width="2" fill="none"/>
  </g></g>
  </svg>"
`;

exports[`SVG snapshots > birds theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#E3F2FD"/>
    <g><g transform="translate(50, 50) scale(0.78) translate(-50, -50)">
    <path d="M44,76 Q38,88 34,96" stroke="#43A047" stroke-width="2.5" fill="none" stroke-linecap="round"/>
    <path d="M50,78 Q50,90 50,98" stroke="#39963d" stroke-width="2.5" fill="none" stroke-linecap="round"/>
    <path d="M56,76 Q62,88 66,96" stroke="#43A047" stroke-width="2.5" fill="none" stroke-linecap="round"/>
  
    <path d="M34,48 Q22,42 18,52 Q16,60 28,62" fill="#349138" stroke="#2a872e" stroke-width="0.6"/>
    <path d="M66,48 Q78,42 82,52 Q84,60 72,62" fill="#349138" stroke="#2a872e" stroke-width="0.6"/>
  
    <ellipse cx="50" cy="58" rx="16" ry="20" fill="#43A047"/>
    <ellipse cx="50" cy="62" rx="12" ry="14" fill="#FFF9C4" opacity="0.4"/>
  
    <circle cx="50" cy="32" r="14" fill="#43A047"/>
    <circle cx="50" cy="30" r="9" fill="#4fac53" opacity="0.15"/>
  
    <path d="M44,20 Q40,8 36,4" stroke="#F44336" stroke-width="2.5" fill="none" stroke-linecap="round"/>
    <path d="M50,18 Q50,6 52,2" stroke="#F44336" stroke-width="2.5" fill="none" stroke-linecap="round"/>
    <path d="M56,20 Q60,8 64,4" stroke="#F44336" stroke-width="2.5" fill="none" stroke-linecap="round"/>
    <circle cx="36" cy="4" r="2" fill="#F44336"/>
    <circle cx="52" cy="2" r="2" fill="#F44336"/>
    <circle cx="64" cy="4" r="2" fill="#F44336"/>
  
        <path d="M46,42 L50,47 L54,42" fill="#FF8F00" stroke="#eb7b00" stroke-width="0.6"/>
      
    <path d="M42,76 L38,82 M42,76 L42,82 M42,76 L46,82" stroke="#2a872e" stroke-width="1.5" fill="none" stroke-linecap="round"/>
    <path d="M58,76 L54,82 M58,76 L58,82 M58,76 L62,82" stroke="#2a872e" stroke-width="1.5" fill="none" stroke-linecap="round"/>
  
        <circle cx="44" cy="30" r="4" fill="white"/>
        <circle cx="56" cy="30" r="4" fill="white"/>
        <circle cx="44" cy="31" r="1.8" fill="#212121"/>
        <circle cx="56" cy="31" r="1.8" fill="#212121"/>
        <circle cx="43" cy="29" r="1" fill="white"/>
        <circle cx="55" cy="29" r="1" fill="white"/>
      </g></g>
  </svg>"
`;

exports[`SVG snapshots > birds theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#E0F7FA"/>
    <g><g transform="translate(50, 50) scale(0.78) translate(-50, -50)">
    <path d="M32,50 Q20,48 18,58 Q16,66 26,66" fill="#c42020" stroke="#ba1616" stroke-width="0.6"/>
    <path d="M68,50 Q80,48 82,58 Q84,66 74,66" fill="#c42020" stroke="#ba1616" stroke-width="0.6"/>
  
    <ellipse cx="50" cy="60" rx="18" ry="20" fill="#D32F2F"/>
    <ellipse cx="50" cy="64" rx="14" ry="14" fill="#FFFFFF" opacity="0.4"/>
  
    <circle cx="50" cy="34" r="18" fill="#D32F2F"/>
  
    <path d="M34,22 Q30,10 28,4" stroke="#FFAB00" stroke-width="3" fill="none" stroke-linecap="round"/>
    <path d="M66,22 Q70,10 72,4" stroke="#FFAB00" stroke-width="3" fill="none" stroke-linecap="round"/>
  
    <circle cx="42" cy="32" r="9" fill="#e74343" opacity="0.3"/>
    <circle cx="58" cy="32" r="9" fill="#e74343" opacity="0.3"/>
  
        <circle cx="42" cy="32" r="5.5" fill="white"/>
        <circle cx="58" cy="32" r="5.5" fill="white"/>
        <circle cx="42" cy="33" r="2.475" fill="#FF8F00"/>
        <circle cx="58" cy="33" r="2.475" fill="#FF8F00"/>
        <circle cx="41" cy="31" r="1.375" fill="white"/>
        <circle cx="57" cy="31" r="1.375" fill="white"/>
      
        <path d="M46,42 L50,47 L54,42" fill="#FF8F00" stroke="#eb7b00" stroke-width="0.6"/>
      
    <path d="M42,78 L38,84 M42,78 L42,84 M42,78 L46,84" stroke="#ba1616" stroke-width="1.5" fill="none" stroke-linecap="round"/>
    <path d="M58,78 L54,84 M58,78 L58,84 M58,78 L62,84" stroke="#ba1616" stroke-width="1.5" fill="none" stroke-linecap="round"/>
  </g>
        <g opacity="0.2">
          <ellipse cx="14" cy="14" rx="8" ry="4" fill="white"/>
          <ellipse cx="10" cy="13" rx="5" ry="3" fill="white"/>
          <ellipse cx="18" cy="13" rx="5" ry="3" fill="white"/>
          <ellipse cx="82" cy="10" rx="6" ry="3" fill="white"/>
          <ellipse cx="78" cy="9" rx="4" ry="2.5" fill="white"/>
          <ellipse cx="86" cy="9" rx="4" ry="2.5" fill="white"/>
          <ellipse cx="88" cy="88" rx="7" ry="3.5" fill="white"/>
          <ellipse cx="84" cy="87" rx="4.5" ry="2.5" fill="white"/>
          <ellipse cx="92" cy="87" rx="4.5" ry="2.5" fill="white"/>
        </g>
      </g>
  </svg>"
`;

exports[`SVG snapshots > birds theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#C8E6C9"/>
    <g><g transform="translate(50, 50) scale(0.76) translate(-50, -50)">
    <path d="M42,76 Q38,84 34,88" stroke="#E65100" stroke-width="2" fill="none" stroke-linecap="round"/>
    <path d="M50,78 Q50,86 50,90" stroke="#E65100" stroke-width="2" fill="none" stroke-linecap="round"/>
    <path d="M58,76 Q62,84 66,88" stroke="#E65100" stroke-width="2" fill="none" stroke-linecap="round"/>
  
    <path d="M30,46 Q14,36 10,44 Q8,52 22,56" fill="#d74200" stroke="#cd3800" stroke-width="0.6"/>
    <path d="M70,46 Q86,36 90,44 Q92,52 78,56" fill="#d74200" stroke="#cd3800" stroke-width="0.6"/>
  
    <ellipse cx="50" cy="56" rx="20" ry="22" fill="#E65100"/>
    <ellipse cx="50" cy="60" rx="14" ry="14" fill="#FFF9C4" opacity="0.3"/>
  
        <circle cx="44" cy="51.6" r="1.6" fill="#c83300" opacity="0.35"/>
        <circle cx="57" cy="52.7" r="1.2" fill="#c83300" opacity="0.35"/>
        <circle cx="48" cy="61.5" r="1.4000000000000001" fill="#c83300" opacity="0.35"/>
        <circle cx="58" cy="60.4" r="1" fill="#c83300" opacity="0.35"/>
      
    <circle cx="50" cy="30" r="14" fill="#FF5722"/>
    <circle cx="50" cy="28" r="9" fill="#ff612c" opacity="0.15"/>
  
    <path d="M38,24 L44,26" stroke="#e13904" stroke-width="2" fill="none" stroke-linecap="round"/>
    <path d="M62,24 L56,26" stroke="#e13904" stroke-width="2" fill="none" stroke-linecap="round"/>
  
        <circle cx="44" cy="28" r="4" fill="white"/>
        <circle cx="56" cy="28" r="4" fill="white"/>
        <circle cx="44" cy="29" r="1.8" fill="#FF8F00"/>
        <circle cx="56" cy="29" r="1.8" fill="#FF8F00"/>
        <path d="M40,26.8 Q44,24.8 48,26.8" fill="white" stroke="none"/>
        <path d="M52,26.8 Q56,24.8 60,26.8" fill="white" stroke="none"/>
      
    <path d="M47,36 L50,44 L53,36" fill="#FFB300" stroke="#eb9f00" stroke-width="0.6"/>
    <path d="M49,40 Q50,42 51,40" stroke="#e19500" stroke-width="0.4" fill="none"/>
  
    <path d="M40,76 L36,82 M40,76 L40,84 M40,76 L44,82" stroke="#cd3800" stroke-width="2" fill="none" stroke-linecap="round"/>
    <path d="M60,76 L56,82 M60,76 L60,84 M60,76 L64,82" stroke="#cd3800" stroke-width="2" fill="none" stroke-linecap="round"/>
  </g>
        <g opacity="0.25">
          <path d="M10,84 Q12,78 16,76 Q12,80 14,86 Q10,82 10,84 Z" fill="#8D6E63"/>
          <path d="M10,84 L13,80" stroke="#6D4C41" stroke-width="0.5" fill="none"/>
          <path d="M86,12 Q88,6 92,4 Q88,8 90,14 Q86,10 86,12 Z" fill="#78909C"/>
          <path d="M86,12 L89,8" stroke="#546E7A" stroke-width="0.5" fill="none"/>
          <path d="M84,90 Q86,84 90,82 Q86,86 88,92 Q84,88 84,90 Z" fill="#A1887F"/>
          <path d="M84,90 L87,86" stroke="#6D4C41" stroke-width="0.5" fill="none"/>
          <path d="M12,16 Q14,10 18,8 Q14,12 16,18 Q12,14 12,16 Z" fill="#90A4AE"/>
          <path d="M12,16 L15,12" stroke="#607D8B" stroke-width="0.5" fill="none"/>
        </g>
      </g>
  </svg>"
`;

exports[`SVG snapshots > dinosaurs theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#8b7355"/>
    <g><g transform="translate(50, 50) scale(0.82) translate(-50, -50)">
    <path d="M50,78 Q36,82 28,76 Q24,73 26,70" stroke="#6b8e23" stroke-width="8" fill="none" stroke-linecap="round"/>
  
    <rect x="38" y="76" width="8" height="12" rx="3" fill="#52750a"/>
    <rect x="54" y="76" width="8" height="12" rx="3" fill="#52750a"/>
  
    <ellipse cx="50" cy="62" rx="16" ry="20" fill="#6b8e23"/>
    <ellipse cx="50" cy="66" rx="10" ry="12" fill="#f5e6c8" opacity="0.3"/>
  
    <path d="M38,56 Q34,58 33,62" stroke="#6b8e23" stroke-width="3" fill="none" stroke-linecap="round"/>
    <path d="M62,56 Q66,58 67,62" stroke="#6b8e23" stroke-width="3" fill="none" stroke-linecap="round"/>
  
    <ellipse cx="50" cy="34" rx="20" ry="17" fill="#6b8e23"/>
    <ellipse cx="50" cy="30" rx="16" ry="10" fill="#7a9d32" opacity="0.2"/>
  
    <ellipse cx="50" cy="42" rx="14" ry="6" fill="#52750a" opacity="0.15"/>
  
    <circle cx="45" cy="40" r="1" fill="#52750a"/>
    <circle cx="55" cy="40" r="1" fill="#52750a"/>
  
        <circle cx="42" cy="30" r="5" fill="white"/>
        <circle cx="58" cy="30" r="5" fill="white"/>
        <circle cx="42" cy="31" r="2.5" fill="#2c3e50"/>
        <circle cx="58" cy="31" r="2.5" fill="#2c3e50"/>
        <circle cx="41" cy="29" r="1.5" fill="white"/>
        <circle cx="57" cy="29" r="1.5" fill="white"/>
      <path d="M44,46 Q50,52 56,46" stroke="#52750a" stroke-width="1.5" fill="none" stroke-linecap="round"/></g>
    <g opacity="0.3">
      <path d="M8,92 Q10,82 6,75" stroke="#2d5016" stroke-width="1.5" fill="none" stroke-linecap="round"/>
      <ellipse cx="5" cy="76" rx="3" ry="2" fill="#4a7c28" transform="rotate(-30, 5, 76)"/>
      <ellipse cx="8" cy="80" rx="3" ry="2" fill="#4a7c28" transform="rotate(20, 8, 80)"/>
      <ellipse cx="6" cy="84" rx="2.5" ry="1.8" fill="#3d6b22" transform="rotate(-15, 6, 84)"/>
      <path d="M92,92 Q90,82 94,75" stroke="#2d5016" stroke-width="1.5" fill="none" stroke-linecap="round"/>
      <ellipse cx="95" cy="76" rx="3" ry="2" fill="#4a7c28" transform="rotate(30, 95, 76)"/>
      <ellipse cx="92" cy="80" rx="3" ry="2" fill="#4a7c28" transform="rotate(-20, 92, 80)"/>
      <ellipse cx="94" cy="84" rx="2.5" ry="1.8" fill="#3d6b22" transform="rotate(15, 94, 84)"/>
      <ellipse cx="85" cy="12" rx="4" ry="2" fill="#4a7c28" opacity="0.7" transform="rotate(-40, 85, 12)"/>
    </g>
  </g>
  </svg>"
`;

exports[`SVG snapshots > dinosaurs theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#4a6741"/>
    <g><g transform="translate(50, 50) scale(0.75) translate(-50, -50)">
    <rect x="34" y="80" width="8" height="10" rx="3" fill="#576777"/>
    <rect x="58" y="80" width="8" height="10" rx="3" fill="#576777"/>
  
    <ellipse cx="50" cy="72" rx="18" ry="14" fill="#708090"/>
    <ellipse cx="50" cy="76" rx="12" ry="8" fill="#fdf2e9" opacity="0.3"/>
  
    <path d="M14,38 Q12,22 24,14 Q34,8 50,6 Q66,8 76,14 Q88,22 86,38 Z" fill="#8494a4" stroke="#576777" stroke-width="1.5"/>
    <circle cx="26" cy="20" r="3" fill="#576777" opacity="0.2"/>
    <circle cx="50" cy="14" r="3" fill="#576777" opacity="0.2"/>
    <circle cx="74" cy="20" r="3" fill="#576777" opacity="0.2"/>
  
    <ellipse cx="50" cy="46" rx="22" ry="20" fill="#708090"/>
    <ellipse cx="50" cy="52" rx="14" ry="10" fill="#fdf2e9" opacity="0.3"/>
  
    <path d="M42,58 Q50,64 58,58" fill="#576777" opacity="0.15"/>
  
    <polygon points="38,34 36,18 40,32" fill="#8494a4" stroke="#576777" stroke-width="0.5"/>
    <polygon points="62,34 64,18 60,32" fill="#8494a4" stroke="#576777" stroke-width="0.5"/>
    <polygon points="50,54 50,48 52,53" fill="#8494a4" stroke="#576777" stroke-width="0.5"/>
  
        <circle cx="40" cy="40" r="5" fill="white"/>
        <circle cx="60" cy="40" r="5" fill="white"/>
        <circle cx="40" cy="41" r="2.5" fill="#c0392b"/>
        <circle cx="60" cy="41" r="2.5" fill="#c0392b"/>
        <path d="M35,38.5 Q40,36 45,38.5" fill="white" stroke="none"/>
        <path d="M55,38.5 Q60,36 65,38.5" fill="white" stroke="none"/>
      <line x1="46" y1="60" x2="54" y2="60" stroke="#576777" stroke-width="1.5" stroke-linecap="round"/></g>
    <g opacity="0.3">
      <path d="M8,92 Q10,82 6,75" stroke="#2d5016" stroke-width="1.5" fill="none" stroke-linecap="round"/>
      <ellipse cx="5" cy="76" rx="3" ry="2" fill="#4a7c28" transform="rotate(-30, 5, 76)"/>
      <ellipse cx="8" cy="80" rx="3" ry="2" fill="#4a7c28" transform="rotate(20, 8, 80)"/>
      <ellipse cx="6" cy="84" rx="2.5" ry="1.8" fill="#3d6b22" transform="rotate(-15, 6, 84)"/>
      <path d="M92,92 Q90,82 94,75" stroke="#2d5016" stroke-width="1.5" fill="none" stroke-linecap="round"/>
      <ellipse cx="95" cy="76" rx="3" ry="2" fill="#4a7c28" transform="rotate(30, 95, 76)"/>
      <ellipse cx="92" cy="80" rx="3" ry="2" fill="#4a7c28" transform="rotate(-20, 92, 80)"/>
      <ellipse cx="94" cy="84" rx="2.5" ry="1.8" fill="#3d6b22" transform="rotate(15, 94, 84)"/>
      <ellipse cx="85" cy="12" rx="4" ry="2" fill="#4a7c28" opacity="0.7" transform="rotate(-40, 85, 12)"/>
    </g>
  </g>
  </svg>"
`;

exports[`SVG snapshots > dinosaurs theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#9e8c6c"/>
    <g><g transform="translate(50, 50) scale(0.7) translate(-50, -50)">
    <path d="M50,44 L8,30 L12,48 L26,46 L38,48 Z" fill="#d4a574" stroke="#bb8c5b" stroke-width="0.5"/>
    <path d="M50,44 L92,30 L88,48 L74,46 L62,48 Z" fill="#d4a574" stroke="#bb8c5b" stroke-width="0.5"/>
    <path d="M50,44 L8,30 L12,48" fill="#e8b988" opacity="0.2"/>
    <path d="M50,44 L92,30 L88,48" fill="#e8b988" opacity="0.2"/>
  
    <line x1="50" y1="44" x2="16" y2="36" stroke="#bb8c5b" stroke-width="0.5" opacity="0.3"/>
    <line x1="50" y1="44" x2="24" y2="40" stroke="#bb8c5b" stroke-width="0.5" opacity="0.3"/>
    <line x1="50" y1="44" x2="84" y2="36" stroke="#bb8c5b" stroke-width="0.5" opacity="0.3"/>
    <line x1="50" y1="44" x2="76" y2="40" stroke="#bb8c5b" stroke-width="0.5" opacity="0.3"/>
  
    <path d="M46,64 L44,72 L42,71 L44,72 L46,71" stroke="#bb8c5b" stroke-width="1.5" fill="none" stroke-linecap="round"/>
    <path d="M54,64 L56,72 L58,71 L56,72 L54,71" stroke="#bb8c5b" stroke-width="1.5" fill="none" stroke-linecap="round"/>
  
    <ellipse cx="50" cy="52" rx="10" ry="12" fill="#d4a574"/>
    <ellipse cx="50" cy="56" rx="6" ry="6" fill="#f5e6c8" opacity="0.3"/>
  
    <ellipse cx="50" cy="32" rx="8" ry="7" fill="#d4a574"/>
  
    <path d="M52,26 Q58,20 66,18 Q60,24 54,28" fill="#e8b988" stroke="#bb8c5b" stroke-width="0.5"/>
  
    <polygon points="50,36 46,39 50,38 54,39" fill="#bb8c5b"/>
  
        <defs>
          <pattern id="dino-plates-50-52" width="8" height="8" patternUnits="userSpaceOnUse">
            <path d="M0,8 L4,2 L8,8" fill="#b68756" opacity="0.2"/>
          </pattern>
        </defs>
        <ellipse cx="50" cy="52" rx="8.5" ry="10.2" fill="url(#dino-plates-50-52)"/>
      
        <circle cx="46" cy="30" r="3.5" fill="white"/>
        <circle cx="54" cy="30" r="3.5" fill="white"/>
        <circle cx="46" cy="31" r="1.75" fill="#2c3e50"/>
        <circle cx="54" cy="31" r="1.75" fill="#2c3e50"/>
        <line x1="42.5" y1="26.5" x2="49.5" y2="28.6" stroke="#2c3e50" stroke-width="2"/>
        <line x1="57.5" y1="26.5" x2="50.5" y2="28.6" stroke="#2c3e50" stroke-width="2"/>
      
        <path d="M43,38 Q50,42 57,38" fill="#bb8c5b"/>
        <polygon points="46,38 47,41 48,38" fill="white"/>
        <polygon points="49,38 50,41 51,38" fill="white"/>
        <polygon points="52,38 53,41 54,38" fill="white"/>
      </g></g>
  </svg>"
`;

exports[`SVG snapshots > food theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#FFF8E1"/>
    <g><g transform="translate(50, 50) scale(0.78) translate(-50, -50)">
    <ellipse cx="50" cy="72" rx="27" ry="7.5" fill="#dde0e2" opacity="0.3"/>
    <ellipse cx="50" cy="72" rx="24" ry="6" fill="#ECEFF1"/>
    <ellipse cx="50" cy="72" rx="21" ry="5" fill="#f4f7f9" opacity="0.2"/>
  
    <ellipse cx="50" cy="56" rx="16" ry="12" fill="#FFCC80" stroke="#f0bd71" stroke-width="0.5"/>
    <ellipse cx="50" cy="54" rx="14" ry="10" fill="white" opacity="0.15"/>
  
    <rect x="42" y="52" width="16" height="10" rx="1" fill="#2E3B2E" opacity="0.85"/>
    <rect x="44" y="54" width="12" height="6" rx="0.5" fill="#3E4F3E" opacity="0.2"/>
  
    <path d="M34,48 Q42,38 50,40 Q58,38 66,48 Q58,52 50,50 Q42,52 34,48 Z" fill="#E53935" stroke="#d62a26" stroke-width="0.5"/>
    <path d="M38,46 Q50,40 62,46" stroke="#f44844" stroke-width="0.8" fill="none" opacity="0.3" stroke-linecap="round"/>
  
        <circle cx="45" cy="44" r="2.5" fill="white"/>
        <circle cx="55" cy="44" r="2.5" fill="white"/>
        <circle cx="45" cy="45" r="1.125" fill="#1a1a1a"/>
        <circle cx="55" cy="45" r="1.125" fill="#1a1a1a"/>
        <circle cx="44" cy="43" r="0.625" fill="white"/>
        <circle cx="54" cy="43" r="0.625" fill="white"/>
      
        <path d="M47,49 Q50,53 53,49" stroke="#5D4037" stroke-width="0.8" fill="none" stroke-linecap="round"/>
      </g></g>
  </svg>"
`;

exports[`SVG snapshots > food theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#E8F5E9"/>
    <g><g transform="translate(50, 50) scale(0.74) translate(-50, -50)">
    <ellipse cx="50" cy="78" rx="25" ry="6.5" fill="#e6e6e6" opacity="0.3"/>
    <ellipse cx="50" cy="78" rx="22" ry="5" fill="#F5F5F5"/>
    <ellipse cx="50" cy="78" rx="19" ry="4" fill="#fdfdfd" opacity="0.2"/>
  
    <path d="M50,22 L26,76 L74,76 Z" fill="#FFB74D" stroke="#eba339" stroke-width="0.6"/>
  
    <path d="M50,26 L28,74 L72,74 Z" fill="#FFE0B2"/>
    <path d="M72,74 Q68,68 74,76" fill="#FFE0B2" stroke="#eba339" stroke-width="0.3" opacity="0.6"/>
    <path d="M28,74 Q32,68 26,76" fill="#FFE0B2" stroke="#eba339" stroke-width="0.3" opacity="0.6"/>
  
    <path d="M26,76 Q50,82 74,76" fill="#f5ad43" stroke="#eba339" stroke-width="0.5"/>
  
    <circle cx="44" cy="58" r="4" fill="#FF5722" opacity="0.8"/>
    <circle cx="56" cy="54" r="3.5" fill="#FF5722" opacity="0.8"/>
    <circle cx="50" cy="66" r="4" fill="#FF5722" opacity="0.8"/>
    <circle cx="38" cy="68" r="3" fill="#f54d18" opacity="0.7"/>
    <circle cx="60" cy="66" r="3" fill="#f54d18" opacity="0.7"/>
  
        <g opacity="0.4">
          <ellipse cx="45.2" cy="46" rx="1.2" ry="0.8" fill="#FFF9C4" transform="rotate(15, 45.2, 46)"/>
          <ellipse cx="54" cy="48" rx="1.2" ry="0.8" fill="#FFF9C4" transform="rotate(-10, 54, 48)"/>
          <ellipse cx="50" cy="53" rx="1.2" ry="0.8" fill="#FFF9C4" transform="rotate(25, 50, 53)"/>
          <ellipse cx="56.4" cy="54" rx="1" ry="0.7" fill="#212121" transform="rotate(-5, 56.4, 54)"/>
        </g>
      
        <circle cx="44" cy="44" r="3" fill="white"/>
        <circle cx="56" cy="44" r="3" fill="white"/>
        <circle cx="44" cy="45" r="1.35" fill="#1a1a1a"/>
        <circle cx="56" cy="45" r="1.35" fill="#1a1a1a"/>
        <circle cx="43" cy="43" r="0.75" fill="white"/>
        <circle cx="55" cy="43" r="0.75" fill="white"/>
      
        <path d="M47,52 Q50,56 53,52" stroke="#5D4037" stroke-width="0.8" fill="none" stroke-linecap="round"/>
      </g>
        <g opacity="0.25">
          <path d="M38,18 Q36,12 38,6" stroke="white" stroke-width="2" fill="none" stroke-linecap="round"/>
          <path d="M50,16 Q48,10 50,4" stroke="white" stroke-width="2.5" fill="none" stroke-linecap="round"/>
          <path d="M62,18 Q64,12 62,6" stroke="white" stroke-width="2" fill="none" stroke-linecap="round"/>
        </g>
      </g>
  </svg>"
`;

exports[`SVG snapshots > food theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#FFE0B2"/>
    <g><g transform="translate(50, 50) scale(0.78) translate(-50, -50)">
    <ellipse cx="50" cy="74" rx="27" ry="6.5" fill="#c0c9cd" opacity="0.3"/>
    <ellipse cx="50" cy="74" rx="24" ry="5" fill="#CFD8DC"/>
    <ellipse cx="50" cy="74" rx="21" ry="4" fill="#d7e0e4" opacity="0.2"/>
  
    <ellipse cx="50" cy="50" rx="22" ry="20" fill="#FFCC80" stroke="#f0bd71" stroke-width="0.6"/>
    <ellipse cx="50" cy="50" rx="8" ry="7" fill="#ffea9e"/>
  
    <ellipse cx="50" cy="50" rx="8" ry="7" fill="#CFD8DC"/>
  
    <path d="M28,48 Q30,36 38,30 Q50,24 62,30 Q70,36 72,48 Q68,52 62,50 Q56,54 50,50 Q44,54 38,50 Q32,52 28,48 Z" fill="#D7CCC8" stroke="#c3b8b4" stroke-width="0.5"/>
    <ellipse cx="50" cy="40" rx="8" ry="6" fill="#D7CCC8"/>
  
    <g opacity="0.7">
      <rect x="36" y="34" width="2" height="4" rx="1" fill="#D32F2F" transform="rotate(20, 36, 34)"/>
      <rect x="48" y="30" width="2" height="4" rx="1" fill="#e74343" transform="rotate(-15, 48, 30)"/>
      <rect x="60" y="36" width="2" height="4" rx="1" fill="#D32F2F" transform="rotate(35, 60, 36)"/>
      <rect x="42" y="38" width="2" height="4" rx="1" fill="#dd3939" transform="rotate(-30, 42, 38)"/>
      <rect x="56" y="32" width="2" height="4" rx="1" fill="#D32F2F" transform="rotate(10, 56, 32)"/>
    </g>
  
        <g opacity="0.3">
          <path d="M41,35.6 Q45.5,33.8 50,35.6 Q54.5,37.4 59,35.6" stroke="#b9aeaa" stroke-width="1.5" fill="none" stroke-linecap="round"/>
          <path d="M42.8,39.2 Q47.3,37.4 51.8,39.2 Q55.4,41 59,39.2" stroke="#b9aeaa" stroke-width="1.5" fill="none" stroke-linecap="round"/>
        </g>
      
        <path d="M39.5,40 Q42,37 44.5,40" stroke="#1a1a1a" stroke-width="1.2" fill="none" stroke-linecap="round"/>
        <path d="M55.5,40 Q58,37 60.5,40" stroke="#1a1a1a" stroke-width="1.2" fill="none" stroke-linecap="round"/>
        <ellipse cx="45" cy="41" rx="1.5" ry="0.75" fill="#FFB6C1" opacity="0.4"/>
        <ellipse cx="55" cy="41" rx="1.5" ry="0.75" fill="#FFB6C1" opacity="0.4"/>
      
        <path d="M47,46 Q50,51 53,46" stroke="#5D4037" stroke-width="0.8" fill="none" stroke-linecap="round"/>
        <ellipse cx="50" cy="49" rx="1.5" ry="2" fill="#E57373" opacity="0.7"/>
      </g>
        <g opacity="0.25">
          <path d="M38,18 Q36,12 38,6" stroke="white" stroke-width="2" fill="none" stroke-linecap="round"/>
          <path d="M50,16 Q48,10 50,4" stroke="white" stroke-width="2.5" fill="none" stroke-linecap="round"/>
          <path d="M62,18 Q64,12 62,6" stroke="white" stroke-width="2" fill="none" stroke-linecap="round"/>
        </g>
      </g>
  </svg>"
`;

exports[`SVG snapshots > gems theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#1A237E"/>
    <g><g transform="translate(50, 50) scale(0.76) translate(-50, -50)">
    <polygon points="38,38 62,38 72,52 28,52" fill="#B3E5FC" stroke="#9fd1e8" stroke-width="0.6"/>
  
    <polygon points="42,38 58,38 54,44 46,44" fill="#c2f4ff" opacity="0.4"/>
  
    <polygon points="28,52 72,52 50,76" fill="#a9dbf2" stroke="#9fd1e8" stroke-width="0.6"/>
  
    <g stroke="#FFFFFF" stroke-width="0.5" opacity="0.3">
      <line x1="46" y1="44" x2="28" y2="52"/>
      <line x1="54" y1="44" x2="72" y2="52"/>
      <line x1="50" y1="38" x2="50" y2="44"/>
    </g>
  
    <g stroke="#FFFFFF" stroke-width="0.4" opacity="0.2">
      <line x1="38" y1="52" x2="50" y2="76"/>
      <line x1="62" y1="52" x2="50" y2="76"/>
      <line x1="50" y1="52" x2="50" y2="76"/>
    </g>
  
    <polygon points="42,40 48,40 46,46 40,46" fill="#E1F5FE" opacity="0.2"/>
  
        <circle cx="44" cy="48" r="2.5" fill="white"/>
        <circle cx="56" cy="48" r="2.5" fill="white"/>
        <circle cx="44" cy="49" r="1.125" fill="#1a1a1a"/>
        <circle cx="56" cy="49" r="1.125" fill="#1a1a1a"/>
        <circle cx="43" cy="47" r="0.625" fill="white"/>
        <circle cx="55" cy="47" r="0.625" fill="white"/>
      
        <path d="M47,54 Q50,58 53,54" stroke="#5D4037" stroke-width="0.8" fill="none" stroke-linecap="round"/>
      </g></g>
  </svg>"
`;

exports[`SVG snapshots > gems theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#880E4F"/>
    <g><g transform="translate(50, 50) scale(0.78) translate(-50, -50)">
    <ellipse cx="50" cy="50" rx="20" ry="18" fill="#66BB6A" stroke="#52a756" stroke-width="0.6"/>
  
    <ellipse cx="50" cy="50" rx="16" ry="14" fill="#70c574" opacity="0.15"/>
    <ellipse cx="44" cy="44" rx="8" ry="6" fill="#FFCDD2" opacity="0.15"/>
  
    <g stroke="#F5F5F5" stroke-width="0.6" opacity="0.2" stroke-linecap="round">
      <line x1="50" y1="36" x2="50" y2="64"/>
      <line x1="36" y1="44" x2="64" y2="56"/>
      <line x1="36" y1="56" x2="64" y2="44"/>
    </g>
  
        <g opacity="0.15">
          <circle cx="46.4" cy="47.6" r="1.5" fill="#F5F5F5"/>
          <circle cx="54.5" cy="51.6" r="1" fill="#F5F5F5"/>
          <ellipse cx="51.8" cy="46" rx="2" ry="0.8" fill="#F5F5F5" transform="rotate(30, 51.8, 46)"/>
          <circle cx="44.6" cy="53.2" r="0.8" fill="#F5F5F5"/>
        </g>
      
        <circle cx="44" cy="48" r="2.5" fill="white"/>
        <circle cx="56" cy="48" r="2.5" fill="white"/>
        <circle cx="44" cy="49" r="1.125" fill="#1a1a1a"/>
        <circle cx="56" cy="49" r="1.125" fill="#1a1a1a"/>
        <circle cx="43" cy="47" r="0.625" fill="white"/>
        <circle cx="55" cy="47" r="0.625" fill="white"/>
      
        <path d="M47,54 Q50,58 53,54" stroke="#5D4037" stroke-width="0.8" fill="none" stroke-linecap="round"/>
      </g>
        <g opacity="0.45">
          <path d="M14,16 L15,12 L16,16 L20,15 L16,16 L15,20 L14,16 L10,15 Z" fill="#FFFFFF"/>
          <path d="M82,14 L83,11 L84,14 L87,13 L84,14 L83,17 L82,14 L79,13 Z" fill="#FFFFFF"/>
          <path d="M12,76 L13,73 L14,76 L17,75 L14,76 L13,79 L12,76 L9,75 Z" fill="#FFFFFF"/>
          <path d="M86,78 L87,75 L88,78 L91,77 L88,78 L87,81 L86,78 L83,77 Z" fill="#FFFFFF"/>
          <path d="M10,46 L11,43 L12,46 L15,45 L12,46 L11,49 L10,46 L7,45 Z" fill="#FFFFFF"/>
          <path d="M88,50 L89,47 L90,50 L93,49 L90,50 L89,53 L88,50 L85,49 Z" fill="#FFFFFF"/>
        </g>
      </g>
  </svg>"
`;

exports[`SVG snapshots > gems theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#004D40"/>
    <g><g transform="translate(50, 50) scale(0.74) translate(-50, -50)">
    <polygon points="40,74 34,74 28,54 34,30 40,30 46,54" fill="#127cd9" stroke="#0a74d1" stroke-width="0.5"/>
    <polygon points="54,74 48,74 42,48 48,24 54,24 60,48" fill="#1E88E5" stroke="#0a74d1" stroke-width="0.5"/>
    <polygon points="66,74 60,74 54,52 60,32 66,32 72,52" fill="#1882df" stroke="#0a74d1" stroke-width="0.5"/>
  
    <polygon points="34,30 40,30 37,22" fill="#2892ef" stroke="#0a74d1" stroke-width="0.4"/>
    <polygon points="48,24 54,24 51,16" fill="#2d97f4" stroke="#0a74d1" stroke-width="0.4"/>
    <polygon points="60,32 66,32 63,24" fill="#2690ed" stroke="#0a74d1" stroke-width="0.4"/>
  
    <g stroke="#E0E0E0" stroke-width="0.4" opacity="0.2">
      <line x1="37" y1="30" x2="37" y2="74"/>
      <line x1="51" y1="24" x2="51" y2="74"/>
      <line x1="63" y1="32" x2="63" y2="74"/>
    </g>
  
    <polygon points="48,28 52,28 54,40 48,40" fill="#E1F5FE" opacity="0.12"/>
  
        <g opacity="0.12">
          <path d="M42.8,44 Q46.4,48 50,44 Q53.6,40 57.2,44" stroke="#E0E0E0" stroke-width="2" fill="none" stroke-linecap="round"/>
          <path d="M44.6,52 Q50,49 55.4,52" stroke="#E0E0E0" stroke-width="1.5" fill="none" stroke-linecap="round"/>
        </g>
      
        <g fill="#1a1a1a">
          <path d="M44,49.5 L44.875,51.125 L46.5,52 L44.875,52.875 L44,54.5 L43.125,52.875 L41.5,52 L43.125,51.125 Z"/>
          <path d="M56,49.5 L56.875,51.125 L58.5,52 L56.875,52.875 L56,54.5 L55.125,52.875 L53.5,52 L55.125,51.125 Z"/>
        </g>
        <circle cx="44" cy="52" r="0.625" fill="white"/>
        <circle cx="56" cy="52" r="0.625" fill="white"/>
      
        <path d="M47,58 Q50,63 53,58" stroke="#5D4037" stroke-width="0.8" fill="none" stroke-linecap="round"/>
        <ellipse cx="50" cy="61" rx="1.5" ry="2" fill="#E57373" opacity="0.7"/>
      </g>
        <g opacity="0.45">
          <path d="M14,16 L15,12 L16,16 L20,15 L16,16 L15,20 L14,16 L10,15 Z" fill="#C5CAE9"/>
          <path d="M82,14 L83,11 L84,14 L87,13 L84,14 L83,17 L82,14 L79,13 Z" fill="#C5CAE9"/>
          <path d="M12,76 L13,73 L14,76 L17,75 L14,76 L13,79 L12,76 L9,75 Z" fill="#C5CAE9"/>
          <path d="M86,78 L87,75 L88,78 L91,77 L88,78 L87,81 L86,78 L83,77 Z" fill="#C5CAE9"/>
          <path d="M10,46 L11,43 L12,46 L15,45 L12,46 L11,49 L10,46 L7,45 Z" fill="#C5CAE9"/>
          <path d="M88,50 L89,47 L90,50 L93,49 L90,50 L89,53 L88,50 L85,49 Z" fill="#C5CAE9"/>
        </g>
      </g>
  </svg>"
`;

exports[`SVG snapshots > insects theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#E8F5E9"/>
    <g><g transform="translate(50, 50) scale(0.8) translate(-50, -50)">
    <path d="M50,42 Q22,20 14,34 Q8,46 24,52 Q34,56 50,48" fill="#81D4FA" stroke="#6dc0e6" stroke-width="0.8"/>
    <path d="M50,42 Q78,20 86,34 Q92,46 76,52 Q66,56 50,48" fill="#81D4FA" stroke="#6dc0e6" stroke-width="0.8"/>
    <path d="M50,52 Q28,58 20,68 Q16,76 30,74 Q40,72 50,60" fill="#90e3ff" stroke="#6dc0e6" stroke-width="0.8"/>
    <path d="M50,52 Q72,58 80,68 Q84,76 70,74 Q60,72 50,60" fill="#90e3ff" stroke="#6dc0e6" stroke-width="0.8"/>
  
    <circle cx="30" cy="36" r="5" fill="#FFC107" opacity="0.6"/>
    <circle cx="70" cy="36" r="5" fill="#FFC107" opacity="0.6"/>
    <circle cx="28" cy="66" r="3.5" fill="#FFC107" opacity="0.5"/>
    <circle cx="72" cy="66" r="3.5" fill="#FFC107" opacity="0.5"/>
  
    <ellipse cx="50" cy="50" rx="4" ry="16" fill="#4CAF50"/>
    <ellipse cx="50" cy="50" rx="2.5" ry="14" fill="#FFC107" opacity="0.3"/>
  
    <path d="M48,36 Q42,22 36,16" stroke="#339637" stroke-width="1.2" fill="none" stroke-linecap="round"/>
    <circle cx="36" cy="16" r="2" fill="#339637"/>
    <path d="M52,36 Q58,22 64,16" stroke="#339637" stroke-width="1.2" fill="none" stroke-linecap="round"/>
    <circle cx="64" cy="16" r="2" fill="#339637"/>
  
        <circle cx="46" cy="40" r="3.5" fill="white"/>
        <circle cx="54" cy="40" r="3.5" fill="white"/>
        <circle cx="46" cy="41" r="1.575" fill="#1a1a1a"/>
        <circle cx="54" cy="41" r="1.575" fill="#1a1a1a"/>
        <circle cx="45" cy="39" r="0.875" fill="white"/>
        <circle cx="53" cy="39" r="0.875" fill="white"/>
      <path d="M46,48 Q50,52 54,48" stroke="#339637" stroke-width="1.2" fill="none" stroke-linecap="round"/></g></g>
  </svg>"
`;

exports[`SVG snapshots > insects theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#F1F8E9"/>
    <g><g transform="translate(50, 50) scale(0.82) translate(-50, -50)">
    <ellipse cx="34" cy="38" rx="10" ry="6" fill="#FFF59D" opacity="0.6" transform="rotate(-20, 34, 38)"/>
    <ellipse cx="66" cy="38" rx="10" ry="6" fill="#FFF59D" opacity="0.6" transform="rotate(20, 66, 38)"/>
  
    <line x1="40" y1="66" x2="34" y2="74" stroke="#ba1616" stroke-width="1.5" stroke-linecap="round"/>
    <line x1="50" y1="68" x2="50" y2="76" stroke="#ba1616" stroke-width="1.5" stroke-linecap="round"/>
    <line x1="60" y1="66" x2="66" y2="74" stroke="#ba1616" stroke-width="1.5" stroke-linecap="round"/>
  
    <polygon points="50,74 48,78 52,78" fill="#ba1616"/>
  
    <ellipse cx="50" cy="54" rx="18" ry="20" fill="#D32F2F"/>
  
    <path d="M34,46 Q50,42 66,46" stroke="#FFEB3B" stroke-width="4" fill="none"/>
    <path d="M32,54 Q50,50 68,54" stroke="#FFEB3B" stroke-width="4" fill="none"/>
    <path d="M34,62 Q50,58 66,62" stroke="#FFEB3B" stroke-width="4" fill="none"/>
  
    <circle cx="50" cy="32" r="12" fill="#D32F2F"/>
    <circle cx="50" cy="30" r="8" fill="#e23e3e" opacity="0.2"/>
  
    <path d="M44,22 Q38,12 34,8" stroke="#ba1616" stroke-width="1.5" fill="none" stroke-linecap="round"/>
    <circle cx="34" cy="8" r="2" fill="#ba1616"/>
    <path d="M56,22 Q62,12 66,8" stroke="#ba1616" stroke-width="1.5" fill="none" stroke-linecap="round"/>
    <circle cx="66" cy="8" r="2" fill="#ba1616"/>
  
        <circle cx="44" cy="30" r="4.5" fill="white"/>
        <circle cx="56" cy="30" r="4.5" fill="white"/>
        <circle cx="44" cy="31" r="2.025" fill="#2E7D32"/>
        <circle cx="56" cy="31" r="2.025" fill="#2E7D32"/>
        <circle cx="43" cy="29" r="1.125" fill="white"/>
        <circle cx="55" cy="29" r="1.125" fill="white"/>
      <path d="M46,38 Q50,42 54,38" stroke="#ba1616" stroke-width="1.2" fill="none" stroke-linecap="round"/></g>
        <g opacity="0.4">
          <circle cx="12" cy="84" r="3" fill="#e91e63"/>
          <circle cx="9" cy="84" r="2" fill="#f48fb1"/>
          <circle cx="15" cy="84" r="2" fill="#f48fb1"/>
          <circle cx="12" cy="81" r="2" fill="#f48fb1"/>
          <circle cx="12" cy="87" r="2" fill="#f48fb1"/>
          <circle cx="12" cy="84" r="1.5" fill="#ffeb3b"/>
          <path d="M12,88 Q12,92 10,96" stroke="#2d6b16" stroke-width="1" fill="none" stroke-linecap="round"/>
          <circle cx="86" cy="14" r="2.5" fill="#9c27b0"/>
          <circle cx="84" cy="14" r="1.5" fill="#ce93d8"/>
          <circle cx="88" cy="14" r="1.5" fill="#ce93d8"/>
          <circle cx="86" cy="12" r="1.5" fill="#ce93d8"/>
          <circle cx="86" cy="16" r="1.5" fill="#ce93d8"/>
          <circle cx="86" cy="14" r="1" fill="#ffeb3b"/>
          <circle cx="88" cy="86" r="2" fill="#ff7043"/>
          <circle cx="86" cy="86" r="1.2" fill="#ffab91"/>
          <circle cx="90" cy="86" r="1.2" fill="#ffab91"/>
          <circle cx="88" cy="84" r="1.2" fill="#ffab91"/>
          <circle cx="88" cy="88" r="1.2" fill="#ffab91"/>
          <circle cx="88" cy="86" r="0.8" fill="#ffeb3b"/>
        </g>
      </g>
  </svg>"
`;

exports[`SVG snapshots > insects theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#FFF3E0"/>
    <g><g transform="translate(50, 50) scale(0.78) translate(-50, -50)">
    <path d="M32,50 L22,44 L18,50" stroke="#cd3800" stroke-width="2" fill="none" stroke-linecap="round"/>
    <path d="M68,50 L78,44 L82,50" stroke="#cd3800" stroke-width="2" fill="none" stroke-linecap="round"/>
    <path d="M30,60 L18,60 L14,66" stroke="#cd3800" stroke-width="2" fill="none" stroke-linecap="round"/>
    <path d="M70,60 L82,60 L86,66" stroke="#cd3800" stroke-width="2" fill="none" stroke-linecap="round"/>
    <path d="M32,72 L22,76 L20,82" stroke="#cd3800" stroke-width="2" fill="none" stroke-linecap="round"/>
    <path d="M68,72 L78,76 L80,82" stroke="#cd3800" stroke-width="2" fill="none" stroke-linecap="round"/>
  
    <ellipse cx="50" cy="58" rx="22" ry="24" fill="#E65100"/>
    <ellipse cx="50" cy="54" rx="18" ry="18" fill="#f5600f" opacity="0.12"/>
  
    <line x1="50" y1="36" x2="50" y2="82" stroke="#cd3800" stroke-width="1.2"/>
  
    <ellipse cx="42" cy="50" rx="4" ry="8" fill="white" opacity="0.1" transform="rotate(-15, 42, 50)"/>
  
        <circle cx="43.4" cy="53.2" r="1.76" fill="#c83300" opacity="0.35"/>
        <circle cx="57.7" cy="54.4" r="1.3199999999999998" fill="#c83300" opacity="0.35"/>
        <circle cx="47.8" cy="64" r="1.54" fill="#c83300" opacity="0.35"/>
        <circle cx="58.8" cy="62.8" r="1.1" fill="#c83300" opacity="0.35"/>
      
    <circle cx="50" cy="34" r="12" fill="#cd3800"/>
    <circle cx="50" cy="32" r="7" fill="#d9440c" opacity="0.15"/>
  
    <path d="M50,22 Q52,14 50,8" stroke="#cd3800" stroke-width="3" fill="none" stroke-linecap="round"/>
  
    <path d="M42,40 Q38,44 34,42" stroke="#cd3800" stroke-width="2" fill="none" stroke-linecap="round"/>
    <path d="M58,40 Q62,44 66,42" stroke="#cd3800" stroke-width="2" fill="none" stroke-linecap="round"/>
  
        <circle cx="44" cy="32" r="3.5" fill="white"/>
        <circle cx="56" cy="32" r="3.5" fill="white"/>
        <circle cx="44" cy="33" r="1.575" fill="#2E7D32"/>
        <circle cx="56" cy="33" r="1.575" fill="#2E7D32"/>
        <path d="M40.5,30.95 Q44,29.2 47.5,30.95" fill="white" stroke="none"/>
        <path d="M52.5,30.95 Q56,29.2 59.5,30.95" fill="white" stroke="none"/>
      <line x1="47" y1="40" x2="53" y2="40" stroke="#FFC107" stroke-width="1.2" stroke-linecap="round"/></g>
        <g>
          <ellipse cx="12" cy="82" rx="2.5" ry="3" fill="white" opacity="0.25"/>
          <ellipse cx="12" cy="81" rx="1.5" ry="1.8" fill="white" opacity="0.35"/>
          <circle cx="11" cy="80" r="0.6" fill="white" opacity="0.5"/>
          <ellipse cx="86" cy="16" rx="2" ry="2.5" fill="white" opacity="0.2"/>
          <ellipse cx="86" cy="15" rx="1.2" ry="1.5" fill="white" opacity="0.3"/>
          <circle cx="85.5" cy="14.5" r="0.5" fill="white" opacity="0.5"/>
          <ellipse cx="14" cy="18" rx="1.5" ry="2" fill="white" opacity="0.2"/>
          <ellipse cx="14" cy="17.5" rx="0.8" ry="1" fill="white" opacity="0.35"/>
          <ellipse cx="88" cy="80" rx="2" ry="2.5" fill="white" opacity="0.22"/>
          <ellipse cx="88" cy="79" rx="1.2" ry="1.5" fill="white" opacity="0.32"/>
          <circle cx="87.5" cy="78.5" r="0.5" fill="white" opacity="0.5"/>
          <ellipse cx="50" cy="92" rx="1.8" ry="2.2" fill="white" opacity="0.18"/>
          <ellipse cx="50" cy="91.5" rx="1" ry="1.2" fill="white" opacity="0.28"/>
        </g>
      </g>
  </svg>"
`;

exports[`SVG snapshots > monsters theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#e8f4f8"/>
    <g><g transform="translate(50, 50) scale(0.88) translate(-50, -50)">
    
        <polygon points="28,29 34,8 40,29" fill="#6e2c89"/>
        <polygon points="31,28 34,11 37,28" fill="#a765c2" opacity="0.7"/>
        <polygon points="60,29 66,8 72,29" fill="#6e2c89"/>
        <polygon points="63,28 66,11 69,28" fill="#a765c2" opacity="0.7"/>
      
    
        <ellipse cx="50" cy="55" rx="35" ry="38" fill="#9b59b6"/>
        <ellipse cx="50" cy="58" rx="30" ry="32" fill="#7d3b98" opacity="0.3"/>
      
    <ellipse cx="40" cy="40" rx="10" ry="12" fill="#ffffff"/><circle cx="40" cy="40" r="5" fill="#2c3e50"/><circle cx="39" cy="39" r="2" fill="#ffffff"/><ellipse cx="60" cy="45" rx="10" ry="12" fill="#ffffff"/><circle cx="60" cy="45" r="5" fill="#2c3e50"/><circle cx="59" cy="44" r="2" fill="#ffffff"/>
    <path d="M30,70 Q50,85 70,70" fill="none" stroke="#c0392b" stroke-width="4" stroke-linecap="round"/>
          <rect x="38" y="68" width="6" height="8" fill="white" rx="1"/>
          <rect x="48" y="68" width="6" height="8" fill="white" rx="1"/>
          <rect x="58" y="68" width="6" height="8" fill="white" rx="1"/>
        
  </g></g>
  </svg>"
`;

exports[`SVG snapshots > monsters theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#ee539e"/>
    <g><g transform="translate(50, 50) scale(0.88) translate(-50, -50)">
    
        <polygon points="28,32 34,11 40,32" fill="#00be7c"/>
        <polygon points="31,31 34,14 37,31" fill="#39f7b5" opacity="0.7"/>
        <polygon points="60,32 66,11 72,32" fill="#00be7c"/>
        <polygon points="63,31 66,14 69,31" fill="#39f7b5" opacity="0.7"/>
      
    
        <rect x="15" y="20" width="70" height="70" rx="10" fill="#2deba9"/>
        <rect x="20" y="25" width="60" height="60" rx="8" fill="#0fcd8b" opacity="0.3"/>
      
    <ellipse cx="30" cy="40" rx="7" ry="9" fill="#ffffff"/><circle cx="30" cy="39" r="3.5" fill="#2c3e50"/><circle cx="29" cy="38" r="1.4" fill="#ffffff"/><ellipse cx="40" cy="45" rx="7" ry="9" fill="#ffffff"/><circle cx="40" cy="44" r="3.5" fill="#2c3e50"/><circle cx="39" cy="43" r="1.4" fill="#ffffff"/><ellipse cx="50" cy="40" rx="7" ry="9" fill="#ffffff"/><circle cx="50" cy="39" r="3.5" fill="#2c3e50"/><circle cx="49" cy="38" r="1.4" fill="#ffffff"/><ellipse cx="60" cy="45" rx="7" ry="9" fill="#ffffff"/><circle cx="60" cy="44" r="3.5" fill="#2c3e50"/><circle cx="59" cy="43" r="1.4" fill="#ffffff"/><ellipse cx="70" cy="40" rx="7" ry="9" fill="#ffffff"/><circle cx="70" cy="39" r="3.5" fill="#2c3e50"/><circle cx="69" cy="38" r="1.4" fill="#ffffff"/>
    <ellipse cx="50" cy="75" rx="10" ry="12" fill="#338fe1"/>
  </g></g>
  </svg>"
`;

exports[`SVG snapshots > monsters theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#2e719e"/>
    <g><g transform="translate(50, 50) scale(0.88) translate(-50, -50)">
    
        <polygon points="28,32 34,11 40,32" fill="#ab0013"/>
        <polygon points="31,31 34,14 37,31" fill="#e41a4c" opacity="0.7"/>
        <polygon points="60,32 66,11 72,32" fill="#ab0013"/>
        <polygon points="63,31 66,14 69,31" fill="#e41a4c" opacity="0.7"/>
      
    
        <rect x="15" y="20" width="70" height="70" rx="10" fill="#d80e40"/>
        <rect x="20" y="25" width="60" height="60" rx="8" fill="#ba0022" opacity="0.3"/>
      
    <ellipse cx="30" cy="40" rx="7" ry="9" fill="#ffffff"/><circle cx="30" cy="39" r="3.5" fill="#2c3e50"/><circle cx="29" cy="38" r="1.4" fill="#ffffff"/><ellipse cx="40" cy="45" rx="7" ry="9" fill="#ffffff"/><circle cx="40" cy="44" r="3.5" fill="#2c3e50"/><circle cx="39" cy="43" r="1.4" fill="#ffffff"/><ellipse cx="50" cy="40" rx="7" ry="9" fill="#ffffff"/><circle cx="50" cy="39" r="3.5" fill="#2c3e50"/><circle cx="49" cy="38" r="1.4" fill="#ffffff"/><ellipse cx="60" cy="45" rx="7" ry="9" fill="#ffffff"/><circle cx="60" cy="44" r="3.5" fill="#2c3e50"/><circle cx="59" cy="43" r="1.4" fill="#ffffff"/><ellipse cx="70" cy="40" rx="7" ry="9" fill="#ffffff"/><circle cx="70" cy="39" r="3.5" fill="#2c3e50"/><circle cx="69" cy="38" r="1.4" fill="#ffffff"/>
    <ellipse cx="50" cy="75" rx="10" ry="12" fill="#cc384e"/>
  </g></g>
  </svg>"
`;

exports[`SVG snapshots > mythical theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#1a0a2e"/>
    <g><g transform="translate(50, 50) scale(0.75) translate(-50, -50)">
    <path d="M50,78 Q36,84 26,80 Q20,76 18,72" stroke="#7b2d8e" stroke-width="6" fill="none" stroke-linecap="round"/>
    <path d="M18,72 L14,68 L20,72 L16,74" fill="#621475"/>
  
    <rect x="38" y="76" width="8" height="10" rx="3" fill="#621475"/>
    <rect x="54" y="76" width="8" height="10" rx="3" fill="#621475"/>
  
    <ellipse cx="50" cy="62" rx="16" ry="20" fill="#7b2d8e"/>
    <ellipse cx="50" cy="66" rx="10" ry="12" fill="#f0e6ff" opacity="0.3"/>
  
    <path d="M34,50 L10,32 L16,42 L8,38 L18,48 L14,44 L26,52" fill="#7b2d8e" stroke="#621475" stroke-width="0.5" opacity="0.8"/>
    <path d="M66,50 L90,32 L84,42 L92,38 L82,48 L86,44 L74,52" fill="#7b2d8e" stroke="#621475" stroke-width="0.5" opacity="0.8"/>
  
    <ellipse cx="50" cy="34" rx="18" ry="16" fill="#7b2d8e"/>
    <ellipse cx="50" cy="30" rx="14" ry="10" fill="#8a3c9d" opacity="0.2"/>
  
    <path d="M38,24 Q34,14 30,10" stroke="#621475" stroke-width="3" fill="none" stroke-linecap="round"/>
    <path d="M62,24 Q66,14 70,10" stroke="#621475" stroke-width="3" fill="none" stroke-linecap="round"/>
  
    <circle cx="45" cy="40" r="1" fill="#621475"/>
    <circle cx="55" cy="40" r="1" fill="#621475"/>
  
        <circle cx="42" cy="30" r="5" fill="white"/>
        <circle cx="58" cy="30" r="5" fill="white"/>
        <circle cx="42" cy="31" r="2.5" fill="#ffd700"/>
        <circle cx="58" cy="31" r="2.5" fill="#ffd700"/>
        <circle cx="41" cy="29" r="1.5" fill="white"/>
        <circle cx="57" cy="29" r="1.5" fill="white"/>
      <path d="M44,44 Q50,50 56,44" stroke="#621475" stroke-width="1.5" fill="none" stroke-linecap="round"/></g></g>
  </svg>"
`;

exports[`SVG snapshots > mythical theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#1a1a2e"/>
    <g><g transform="translate(50, 50) scale(0.78) translate(-50, -50)">
    <path d="M42,82 Q32,88 26,84" stroke="#ff69b4" stroke-width="3" fill="none" stroke-linecap="round" opacity="0.7"/>
    <path d="M42,82 Q34,90 28,88" stroke="#9b59b6" stroke-width="2" fill="none" stroke-linecap="round" opacity="0.6"/>
  
    <rect x="38" y="80" width="7" height="12" rx="3" fill="#132567"/>
    <rect x="55" y="80" width="7" height="12" rx="3" fill="#132567"/>
  
    <ellipse cx="50" cy="66" rx="16" ry="20" fill="#2c3e80"/>
    <ellipse cx="50" cy="70" rx="10" ry="12" fill="#ffe6f0" opacity="0.3"/>
  
    <path d="M36,28 Q30,34 28,44 Q26,52 30,58" stroke="#ff69b4" stroke-width="4" fill="none" stroke-linecap="round" opacity="0.7"/>
    <path d="M38,26 Q34,32 32,40 Q30,48 34,56" stroke="#9b59b6" stroke-width="3" fill="none" stroke-linecap="round" opacity="0.6"/>
    <path d="M64,28 Q70,34 72,44 Q74,52 70,58" stroke="#3498db" stroke-width="4" fill="none" stroke-linecap="round" opacity="0.7"/>
    <path d="M62,26 Q66,32 68,40 Q70,48 66,56" stroke="#2ecc71" stroke-width="3" fill="none" stroke-linecap="round" opacity="0.6"/>
  
    <ellipse cx="50" cy="38" rx="16" ry="14" fill="#2c3e80"/>
    <ellipse cx="50" cy="36" rx="12" ry="8" fill="#405294" opacity="0.2"/>
  
    <path d="M38,26 Q36,18 40,22" fill="#2c3e80" stroke="#132567" stroke-width="0.5"/>
    <path d="M62,26 Q64,18 60,22" fill="#2c3e80" stroke="#132567" stroke-width="0.5"/>
  
    <path d="M50,24 L48,8 L52,8 Z" fill="#ffd700"/>
    <path d="M49,22 Q50,18 51,14 Q50,16 49,18" stroke="#e6c200" stroke-width="0.5" fill="none"/>
    <path d="M49,16 Q50,12 51,10" stroke="#e6c200" stroke-width="0.5" fill="none"/>
  
        <ellipse cx="43" cy="36" rx="4.5" ry="2.25" fill="white" opacity="0.9"/>
        <ellipse cx="57" cy="36" rx="4.5" ry="2.25" fill="white" opacity="0.9"/>
        <ellipse cx="43" cy="36" rx="2.25" ry="1.3499999999999999" fill="#ff69b4"/>
        <ellipse cx="57" cy="36" rx="2.25" ry="1.3499999999999999" fill="#ff69b4"/>
      <line x1="45" y1="46" x2="55" y2="46" stroke="#132567" stroke-width="1.5" stroke-linecap="round"/></g></g>
  </svg>"
`;

exports[`SVG snapshots > mythical theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#0f0f23"/>
    <g><g transform="translate(50, 50) scale(0.8) translate(-50, -50)">
    <rect x="34" y="80" width="10" height="10" rx="4" fill="#363636"/>
    <rect x="56" y="80" width="10" height="10" rx="4" fill="#363636"/>
  
    <ellipse cx="50" cy="58" rx="26" ry="28" fill="#4a4a4a"/>
    <ellipse cx="42" cy="50" rx="14" ry="12" fill="#636363" opacity="0.3"/>
    <ellipse cx="58" cy="50" rx="14" ry="12" fill="#636363" opacity="0.3"/>
    <ellipse cx="50" cy="42" rx="16" ry="10" fill="#636363" opacity="0.25"/>
    <ellipse cx="44" cy="62" rx="12" ry="10" fill="#636363" opacity="0.2"/>
    <ellipse cx="56" cy="62" rx="12" ry="10" fill="#636363" opacity="0.2"/>
  
    <ellipse cx="50" cy="64" rx="14" ry="12" fill="#f0e6ff" opacity="0.3"/>
  
    <ellipse cx="30" cy="44" rx="5" ry="4" fill="#636363" opacity="0.4" transform="rotate(-20, 30, 44)"/>
    <ellipse cx="70" cy="44" rx="5" ry="4" fill="#636363" opacity="0.4" transform="rotate(20, 70, 44)"/>
    <ellipse cx="50" cy="28" rx="6" ry="3" fill="#636363" opacity="0.4"/>
  
    <path d="M28,52 Q22,56 20,62" stroke="#4a4a4a" stroke-width="8" fill="none" stroke-linecap="round"/>
    <path d="M72,52 Q78,56 80,62" stroke="#4a4a4a" stroke-width="8" fill="none" stroke-linecap="round"/>
  
    <ellipse cx="50" cy="38" rx="12" ry="10" fill="#404040"/>
  
        <defs>
          <pattern id="myth-scales-50-58" width="8" height="8" patternUnits="userSpaceOnUse">
            <path d="M0,4 Q4,0 8,4 Q4,8 0,4" fill="#2c2c2c" opacity="0.2"/>
          </pattern>
        </defs>
        <ellipse cx="50" cy="58" rx="22.099999999999998" ry="23.8" fill="url(#myth-scales-50-58)"/>
      
        <ellipse cx="44" cy="36" rx="4" ry="3" fill="white"/>
        <ellipse cx="56" cy="36" rx="4" ry="3" fill="white"/>
        <circle cx="44" cy="36" r="2" fill="#ffd700"/>
        <circle cx="56" cy="36" r="2" fill="#ffd700"/>
        <line x1="40" y1="32.4" x2="48" y2="33.2" stroke="#ffd700" stroke-width="1.5" opacity="0.6"/>
        <line x1="60" y1="32.4" x2="52" y2="33.2" stroke="#ffd700" stroke-width="1.5" opacity="0.6"/>
      <path d="M46,44 Q50,46 54,43" stroke="#363636" stroke-width="1.5" fill="none" stroke-linecap="round"/></g>
        <g opacity="0.7">
          <polygon points="82,14 83,17 86,17 84,19 85,22 82,20 79,22 80,19 78,17 81,17" fill="white"/>
          <polygon points="16,22 17,24 19,24 17.5,25.5 18,28 16,26.5 14,28 14.5,25.5 13,24 15,24" fill="#ffd700" opacity="0.8"/>
          <polygon points="76,78 77,80 79,80 77.5,81.5 78,84 76,82.5 74,84 74.5,81.5 73,80 75,80" fill="white" opacity="0.6"/>
          <polygon points="20,72 21,74 23,74 21.5,75 22,77 20,76 18,77 18.5,75 17,74 19,74" fill="#ffd700" opacity="0.5"/>
          <polygon points="88,50 89,52 91,52 89.5,53 90,55 88,54 86,55 86.5,53 85,52 87,52" fill="white" opacity="0.6"/>
        </g>
      </g>
  </svg>"
`;

exports[`SVG snapshots > ocean theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#1a5276"/>
    <g><g transform="translate(50, 50) scale(0.78) translate(-50, -50)">
    <path d="M30,50 Q22,65 18,80 Q16,88 22,85" stroke="#3498db" stroke-width="7" fill="none" stroke-linecap="round"/>
    <path d="M36,52 Q30,70 28,85 Q26,92 32,90" stroke="#3498db" stroke-width="7" fill="none" stroke-linecap="round"/>
    <path d="M44,54 Q42,72 40,88 Q39,94 44,92" stroke="#3498db" stroke-width="7" fill="none" stroke-linecap="round"/>
    <path d="M56,54 Q58,72 60,88 Q61,94 56,92" stroke="#3498db" stroke-width="7" fill="none" stroke-linecap="round"/>
    <path d="M64,52 Q70,70 72,85 Q74,92 68,90" stroke="#3498db" stroke-width="7" fill="none" stroke-linecap="round"/>
    <path d="M70,50 Q78,65 82,80 Q84,88 78,85" stroke="#3498db" stroke-width="7" fill="none" stroke-linecap="round"/>
  
    <circle cx="22" cy="70" r="1.5" fill="#1b7fc2" opacity="0.5"/>
    <circle cx="20" cy="78" r="1.5" fill="#1b7fc2" opacity="0.5"/>
    <circle cx="30" cy="74" r="1.5" fill="#1b7fc2" opacity="0.5"/>
    <circle cx="29" cy="82" r="1.5" fill="#1b7fc2" opacity="0.5"/>
    <circle cx="70" cy="74" r="1.5" fill="#1b7fc2" opacity="0.5"/>
    <circle cx="71" cy="82" r="1.5" fill="#1b7fc2" opacity="0.5"/>
    <circle cx="78" cy="70" r="1.5" fill="#1b7fc2" opacity="0.5"/>
    <circle cx="80" cy="78" r="1.5" fill="#1b7fc2" opacity="0.5"/>
  
    <ellipse cx="50" cy="38" rx="24" ry="22" fill="#3498db"/>
    <ellipse cx="50" cy="42" rx="16" ry="12" fill="#ecf0f1" opacity="0.3"/>
  
        <circle cx="40" cy="36" r="5" fill="white"/>
        <circle cx="60" cy="36" r="5" fill="white"/>
        <circle cx="40" cy="37" r="2.5" fill="#2c3e50"/>
        <circle cx="60" cy="37" r="2.5" fill="#2c3e50"/>
        <circle cx="39" cy="35" r="1.5" fill="white"/>
        <circle cx="59" cy="35" r="1.5" fill="white"/>
      <path d="M44,48 Q50,54 56,48" stroke="#1b7fc2" stroke-width="1.5" fill="none" stroke-linecap="round"/></g>
    <circle cx="75" cy="18" r="3" fill="white" opacity="0.25"/>
    <circle cx="80" cy="12" r="2" fill="white" opacity="0.2"/>
    <circle cx="72" cy="8" r="2.5" fill="white" opacity="0.3"/>
    <circle cx="82" cy="22" r="1.5" fill="white" opacity="0.2"/>
  </g>
  </svg>"
`;

exports[`SVG snapshots > ocean theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#103d55"/>
    <g><g transform="translate(50, 50) scale(0.82) translate(-50, -50)">
    <path d="M15,50 L5,38 L5,62 Z" fill="#15b358"/>
  
    <ellipse cx="45" cy="50" rx="30" ry="18" fill="#2ecc71"/>
    <ellipse cx="45" cy="55" rx="22" ry="10" fill="#ffffff" opacity="0.4"/>
  
    <path d="M35,32 Q45,22 55,32" fill="#15b358"/>
  
    <path d="M38,55 Q32,65 28,68 Q36,62 40,58" fill="#15b358" opacity="0.7"/>
  
    <circle cx="58" cy="46" r="5" fill="white"/>
    <circle cx="58" cy="46" r="3" fill="#1a3c6e"/>
    
    <line x1="54" y1="41" x2="62" y2="43" stroke="#1a3c6e" stroke-width="1.5"/>
  <path d="M62,55 Q68,49 74,55" stroke="#15b358" stroke-width="1.5" fill="none" stroke-linecap="round"/></g>
    <circle cx="75" cy="18" r="3" fill="white" opacity="0.25"/>
    <circle cx="80" cy="12" r="2" fill="white" opacity="0.2"/>
    <circle cx="72" cy="8" r="2.5" fill="white" opacity="0.3"/>
    <circle cx="82" cy="22" r="1.5" fill="white" opacity="0.2"/>
  </g>
  </svg>"
`;

exports[`SVG snapshots > ocean theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#0c2d48"/>
    <g><g transform="translate(50, 50) scale(0.76) translate(-50, -50)">
    <path d="M14,52 Q6,40 4,32 Q10,38 14,42" fill="#e63939"/>
    <path d="M14,52 Q6,64 4,72 Q10,66 14,62" fill="#e63939"/>
  
    <ellipse cx="50" cy="52" rx="36" ry="26" fill="#ff5252"/>
    <ellipse cx="50" cy="60" rx="28" ry="16" fill="#ecf0f1" opacity="0.5"/>
  
    <path d="M42,65 Q36,75 30,78 Q38,72 42,68" fill="#e63939" opacity="0.6"/>
  
        <defs>
          <pattern id="ocean-scales-50-50" width="8" height="8" patternUnits="userSpaceOnUse">
            <path d="M0,4 Q4,0 8,4 Q4,8 0,4" fill="#e13434" opacity="0.2"/>
          </pattern>
        </defs>
        <ellipse cx="50" cy="50" rx="30.599999999999998" ry="22.099999999999998" fill="url(#ocean-scales-50-50)"/>
      
    <circle cx="68" cy="48" r="5" fill="white"/>
    <circle cx="68" cy="48" r="3" fill="#2c3e50"/>
    
    
  <line x1="69" y1="56" x2="79" y2="56" stroke="#e63939" stroke-width="1.5" stroke-linecap="round"/></g></g>
  </svg>"
`;

exports[`SVG snapshots > people theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#ecf0f1"/>
    <g>
    <g transform="translate(50, 50) scale(0.85) translate(-50, -50)">
      
    
    
    <ellipse cx="18" cy="55" rx="5" ry="8" fill="#f5d0c5"/>
    <ellipse cx="18" cy="55" rx="3" ry="5" fill="#e6c1b6" opacity="0.3"/>
    <ellipse cx="82" cy="55" rx="5" ry="8" fill="#f5d0c5"/>
    <ellipse cx="82" cy="55" rx="3" ry="5" fill="#e6c1b6" opacity="0.3"/>
  
    
    <ellipse cx="50" cy="55" rx="32" ry="38" fill="#f5d0c5"/>
    <ellipse cx="50" cy="58" rx="28" ry="32" fill="#e1bcb1" opacity="0.1"/>
  
    
        <path d="M14,38 C12,14 28,-2 50,-2 C72,-2 88,14 86,38 L86,72 C86,78 80,80 70,76 L70,40 C64,28 56,22 50,20 C44,22 36,28 30,40 L30,76 C20,80 14,78 14,72 Z" fill="#5d4e37"/>
        <path d="M20,40 C20,26 32,14 50,14 C68,14 80,26 80,40 C72,36 62,40 50,37 C38,40 28,36 20,40 Z" fill="#5d4e37"/>
      
    
        <ellipse cx="38" cy="50" rx="6" ry="6" fill="white"/>
        <ellipse cx="62" cy="50" rx="6" ry="6" fill="white"/>
        <circle cx="38" cy="51" r="3.2" fill="#3498db"/>
        <circle cx="62" cy="51" r="3.2" fill="#3498db"/>
        <circle cx="38" cy="51" r="1.6" fill="#2c3e50"/>
        <circle cx="62" cy="51" r="1.6" fill="#2c3e50"/>
        <path d="M32,47 Q38,45 44,47" stroke="#2c3e50" stroke-width="1" fill="none"/>
        <path d="M56,47 Q62,45 68,47" stroke="#2c3e50" stroke-width="1" fill="none"/>
      
      <path d="M30,44 Q38,42 46,44" stroke="#3a2b14" stroke-width="2" stroke-linecap="round" fill="none"/>
      <path d="M70,44 Q62,42 54,44" stroke="#3a2b14" stroke-width="2" stroke-linecap="round" fill="none"/>
    
    <path d="M50,55 L47,68 Q50,70 53,68 L50,55" stroke="#d7b2a7" stroke-width="1.4" fill="none"/><path d="M42,78 Q50,82 58,78" stroke="#dcb7ac" stroke-width="2" fill="none" stroke-linecap="round"/>
    
  
    </g>
  </g>
  </svg>"
`;

exports[`SVG snapshots > people theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#2f91b1"/>
    <g>
    <g transform="translate(50, 50) scale(0.85) translate(-50, -50)">
      
    
    
    <ellipse cx="18" cy="55" rx="5" ry="8" fill="#c68642"/>
    <ellipse cx="18" cy="55" rx="3" ry="5" fill="#b77733" opacity="0.3"/>
    <ellipse cx="82" cy="55" rx="5" ry="8" fill="#c68642"/>
    <ellipse cx="82" cy="55" rx="3" ry="5" fill="#b77733" opacity="0.3"/>
  
    
    <ellipse cx="50" cy="55" rx="32" ry="38" fill="#c68642"/>
    <ellipse cx="50" cy="58" rx="28" ry="32" fill="#b2722e" opacity="0.1"/>
  
    
        <path d="M14,44 C10,32 14,20 26,14 C34,6 42,2 50,2 C58,2 66,6 74,14 C86,20 90,32 86,44 C82,36 68,34 50,34 C32,34 18,36 14,44 Z" fill="#2c1810"/>
        <circle cx="14" cy="36" r="10" fill="#2c1810"/>
        <circle cx="86" cy="36" r="10" fill="#2c1810"/>
        <circle cx="22" cy="18" r="10" fill="#2c1810"/>
        <circle cx="78" cy="18" r="10" fill="#2c1810"/>
        <circle cx="36" cy="8" r="10" fill="#2c1810"/>
        <circle cx="64" cy="8" r="10" fill="#2c1810"/>
        <circle cx="50" cy="4" r="10" fill="#2c1810"/>
      
    
        <ellipse cx="38" cy="52" rx="5.5" ry="6" fill="white"/>
        <ellipse cx="62" cy="52" rx="5.5" ry="6" fill="white"/>
        <circle cx="38" cy="53" r="2.8" fill="#23cf0c"/>
        <circle cx="62" cy="53" r="2.8" fill="#23cf0c"/>
        <circle cx="38" cy="53" r="1.4" fill="#2c3e50"/>
        <circle cx="62" cy="53" r="1.4" fill="#2c3e50"/>
        <path d="M32,47 Q38,48 44,47" stroke="#2c3e50" stroke-width="1" fill="none"/>
        <path d="M56,47 Q62,48 68,47" stroke="#2c3e50" stroke-width="1" fill="none"/>
      
      <path d="M30,44 Q38,41 46,44" stroke="#090000" stroke-width="2" stroke-linecap="round" fill="none"/>
      <path d="M70,44 Q62,41 54,44" stroke="#090000" stroke-width="2" stroke-linecap="round" fill="none"/>
    
    <path d="M50,55 L47,68 Q50,70 53,68 L50,55" stroke="#a86824" stroke-width="1.4" fill="none"/><path d="M42,82 Q50,79 58,82" stroke="#ad6d29" stroke-width="2" fill="none" stroke-linecap="round"/>
    
        <circle cx="38" cy="50" r="10" fill="none" stroke="#2c3e50" stroke-width="2"/>
        <circle cx="62" cy="50" r="10" fill="none" stroke="#2c3e50" stroke-width="2"/>
        <line x1="48" y1="50" x2="52" y2="50" stroke="#2c3e50" stroke-width="2"/>
        <line x1="28" y1="48" x2="20" y2="46" stroke="#2c3e50" stroke-width="2"/>
        <line x1="72" y1="48" x2="80" y2="46" stroke="#2c3e50" stroke-width="2"/>
      
  
    </g>
  </g>
  </svg>"
`;

exports[`SVG snapshots > people theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#42ddeb"/>
    <g>
    <g transform="translate(50, 50) scale(0.85) translate(-50, -50)">
      
    
    
    <ellipse cx="18" cy="55" rx="5" ry="8" fill="#8d5524"/>
    <ellipse cx="18" cy="55" rx="3" ry="5" fill="#7e4615" opacity="0.3"/>
    <ellipse cx="82" cy="55" rx="5" ry="8" fill="#8d5524"/>
    <ellipse cx="82" cy="55" rx="3" ry="5" fill="#7e4615" opacity="0.3"/>
  
    
    <ellipse cx="50" cy="55" rx="32" ry="38" fill="#8d5524"/>
    <ellipse cx="50" cy="58" rx="28" ry="32" fill="#794110" opacity="0.1"/>
  
    
        <path d="M24,36 C24,20 36,10 50,10 C64,10 76,20 76,36 C68,28 60,26 50,26 C40,26 32,28 24,36 Z" fill="#ff6347"/>
        <ellipse cx="50" cy="6" rx="9" ry="10" fill="#ff6347"/>
        <circle cx="50" cy="14" r="3.5" fill="#e14529"/>
      
    
        <ellipse cx="38" cy="50" rx="6" ry="6" fill="white"/>
        <ellipse cx="62" cy="50" rx="6" ry="6" fill="white"/>
        <circle cx="38" cy="51" r="3.2" fill="#7070eb"/>
        <circle cx="62" cy="51" r="3.2" fill="#7070eb"/>
        <circle cx="38" cy="51" r="1.6" fill="#2c3e50"/>
        <circle cx="62" cy="51" r="1.6" fill="#2c3e50"/>
        <path d="M32,47 Q38,45 44,47" stroke="#2c3e50" stroke-width="1" fill="none"/>
        <path d="M56,47 Q62,45 68,47" stroke="#2c3e50" stroke-width="1" fill="none"/>
      
      <path d="M30,44 Q38,42 46,44" stroke="#dc4024" stroke-width="2" stroke-linecap="round" fill="none"/>
      <path d="M70,44 Q62,42 54,44" stroke="#dc4024" stroke-width="2" stroke-linecap="round" fill="none"/>
    
    <path d="M50,55 L47,68 Q50,70 53,68 L50,55" stroke="#6f3706" stroke-width="1.4" fill="none"/><path d="M42,78 Q50,82 58,78" stroke="#743c0b" stroke-width="2" fill="none" stroke-linecap="round"/>
    
        <circle cx="38" cy="50" r="10" fill="none" stroke="#2c3e50" stroke-width="2"/>
        <circle cx="62" cy="50" r="10" fill="none" stroke="#2c3e50" stroke-width="2"/>
        <line x1="48" y1="50" x2="52" y2="50" stroke="#2c3e50" stroke-width="2"/>
        <line x1="28" y1="48" x2="20" y2="46" stroke="#2c3e50" stroke-width="2"/>
        <line x1="72" y1="48" x2="80" y2="46" stroke="#2c3e50" stroke-width="2"/>
      
  
    </g>
  </g>
  </svg>"
`;

exports[`SVG snapshots > plants theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#F1F8E9"/>
    <g><g transform="translate(50, 50) scale(0.78) translate(-50, -50)">
    <rect x="34" y="68" width="32" height="3.2399999999999998" rx="2" fill="#795a4f"/>
    <path d="M36,71.24 L39.5,86 L60.5,86 L64,71.24 Z" fill="#8D6E63"/>
    <path d="M38,73.24 L38,78.8" stroke="#997a6f" stroke-width="1.5" fill="none" opacity="0.3" stroke-linecap="round"/>
  
    <ellipse cx="50" cy="50" rx="12" ry="22" fill="#4CAF50" stroke="#389b3c" stroke-width="0.6"/>
    <ellipse cx="50" cy="50" rx="8" ry="18" fill="#81C784" opacity="0.15"/>
  
    <path d="M38,48 Q28,48 28,38 Q28,30 32,30" fill="#4CAF50" stroke="#389b3c" stroke-width="0.6"/>
    <path d="M62,44 Q72,44 72,34 Q72,26 68,26" fill="#4CAF50" stroke="#389b3c" stroke-width="0.6"/>
  
    <g stroke="#298c2d" stroke-width="0.6" stroke-linecap="round" opacity="0.5">
      <line x1="44" y1="34" x2="40" y2="32"/>
      <line x1="56" y1="36" x2="60" y2="34"/>
      <line x1="43" y1="46" x2="39" y2="46"/>
      <line x1="57" y1="50" x2="61" y2="50"/>
      <line x1="44" y1="58" x2="40" y2="60"/>
      <line x1="56" y1="56" x2="60" y2="58"/>
    </g>
  
    <circle cx="50" cy="28" r="4" fill="#E91E63"/>
    <circle cx="46" cy="27" r="2.5" fill="#E91E63" opacity="0.8"/>
    <circle cx="54" cy="27" r="2.5" fill="#E91E63" opacity="0.8"/>
    <circle cx="50" cy="25" r="2.5" fill="#E91E63" opacity="0.8"/>
    <circle cx="50" cy="28" r="1.5" fill="#ff377c"/>
  
        <circle cx="45" cy="44" r="3" fill="white"/>
        <circle cx="55" cy="44" r="3" fill="white"/>
        <circle cx="45" cy="45" r="1.35" fill="#1a1a1a"/>
        <circle cx="55" cy="45" r="1.35" fill="#1a1a1a"/>
        <circle cx="44" cy="43" r="0.75" fill="white"/>
        <circle cx="54" cy="43" r="0.75" fill="white"/>
      
        <path d="M47,50 Q50,54 53,50" stroke="#5D4037" stroke-width="0.8" fill="none" stroke-linecap="round"/>
      </g></g>
  </svg>"
`;

exports[`SVG snapshots > plants theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#FFF8E1"/>
    <g><g transform="translate(50, 50) scale(0.74) translate(-50, -50)">
    <rect x="36" y="76" width="28" height="2.52" rx="2" fill="#c3b8b4"/>
    <path d="M38,78.52 L41,90 L59,90 L62,78.52 Z" fill="#D7CCC8"/>
    <path d="M40,80.52 L40,84.4" stroke="#e3d8d4" stroke-width="1.5" fill="none" opacity="0.3" stroke-linecap="round"/>
  
    <rect x="47" y="42" width="6" height="36" rx="3" fill="#00695C" stroke="#005548" stroke-width="0.5"/>
  
    <path d="M47,58 Q36,52 32,56 Q36,60 47,58 Z" fill="#A5D6A7" stroke="#96c798" stroke-width="0.4"/>
    <path d="M53,64 Q64,58 68,62 Q64,66 53,64 Z" fill="#A5D6A7" stroke="#96c798" stroke-width="0.4"/>
  
    <g>
      <ellipse cx="50" cy="20" rx="4" ry="10" fill="#F44336" stroke="#e53427" stroke-width="0.3"/>
      <ellipse cx="50" cy="20" rx="4" ry="10" fill="#F44336" stroke="#e53427" stroke-width="0.3" transform="rotate(45, 50, 30)"/>
      <ellipse cx="50" cy="20" rx="4" ry="10" fill="#F44336" stroke="#e53427" stroke-width="0.3" transform="rotate(90, 50, 30)"/>
      <ellipse cx="50" cy="20" rx="4" ry="10" fill="#F44336" stroke="#e53427" stroke-width="0.3" transform="rotate(135, 50, 30)"/>
      <ellipse cx="50" cy="20" rx="4" ry="10" fill="#F44336" stroke="#e53427" stroke-width="0.3" transform="rotate(180, 50, 30)"/>
      <ellipse cx="50" cy="20" rx="4" ry="10" fill="#F44336" stroke="#e53427" stroke-width="0.3" transform="rotate(225, 50, 30)"/>
      <ellipse cx="50" cy="20" rx="4" ry="10" fill="#F44336" stroke="#e53427" stroke-width="0.3" transform="rotate(270, 50, 30)"/>
      <ellipse cx="50" cy="20" rx="4" ry="10" fill="#F44336" stroke="#e53427" stroke-width="0.3" transform="rotate(315, 50, 30)"/>
    </g>
  
    <circle cx="50" cy="30" r="10" fill="#005f52"/>
    <circle cx="50" cy="30" r="8" fill="#00695C"/>
  
        <path d="M44.4,28 Q50,27.2 55.6,28" stroke="#004b3e" stroke-width="1.2" fill="none" opacity="0.3"/>
        <path d="M43.6,30.4 Q50,29.6 56.4,30.4" stroke="#004b3e" stroke-width="1.2" fill="none" opacity="0.3"/>
        <path d="M44.4,32.4 Q50,31.6 55.6,32.4" stroke="#004b3e" stroke-width="1.2" fill="none" opacity="0.3"/>
      
        <circle cx="46" cy="28" r="2.5" fill="white"/>
        <circle cx="54" cy="28" r="2.5" fill="white"/>
        <circle cx="46" cy="29" r="1.125" fill="#1a1a1a"/>
        <circle cx="54" cy="29" r="1.125" fill="#1a1a1a"/>
        <circle cx="45" cy="27" r="0.625" fill="white"/>
        <circle cx="53" cy="27" r="0.625" fill="white"/>
      
        <path d="M47,33 Q50,37 53,33" stroke="#5D4037" stroke-width="0.8" fill="none" stroke-linecap="round"/>
      </g>
        <g opacity="0.3">
          <ellipse cx="20" cy="90" rx="6" ry="2" fill="#5D4037"/>
          <ellipse cx="80" cy="88" rx="5" ry="1.5" fill="#5D4037"/>
          <ellipse cx="12" cy="86" rx="3" ry="1" fill="#795548"/>
          <ellipse cx="88" cy="92" rx="4" ry="1.2" fill="#795548"/>
          <circle cx="16" cy="88" r="1.5" fill="#6D4C41"/>
          <circle cx="84" cy="90" r="1" fill="#6D4C41"/>
        </g>
      </g>
  </svg>"
`;

exports[`SVG snapshots > plants theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#DCEDC8"/>
    <g><g transform="translate(50, 50) scale(0.78) translate(-50, -50)">
    <rect x="34" y="72" width="32" height="2.88" rx="2" fill="#654134"/>
    <path d="M36,74.88 L39.5,88 L60.5,88 L64,74.88 Z" fill="#795548"/>
    <path d="M38,76.88 L38,81.6" stroke="#856154" stroke-width="1.5" fill="none" opacity="0.3" stroke-linecap="round"/>
  
    <path d="M44,72 Q40,56 38,44" fill="none" stroke="#7CB342" stroke-width="3" stroke-linecap="round"/>
    <path d="M50,72 Q50,52 50,38" fill="none" stroke="#7CB342" stroke-width="3" stroke-linecap="round"/>
    <path d="M56,72 Q60,56 62,44" fill="none" stroke="#7CB342" stroke-width="3" stroke-linecap="round"/>
  
    <path d="M30,44 Q38,38 38,44 Q38,50 30,44 Z" fill="#7CB342" stroke="#689f2e" stroke-width="0.5"/>
    <path d="M70,44 Q62,38 62,44 Q62,50 70,44 Z" fill="#7CB342" stroke="#689f2e" stroke-width="0.5"/>
  
    <path d="M36,38 Q50,28 64,38" fill="#7CB342" stroke="#689f2e" stroke-width="0.6"/>
    <path d="M36,38 Q50,48 64,38" fill="#81C784" stroke="#689f2e" stroke-width="0.6"/>
  
    <ellipse cx="50" cy="34" rx="10" ry="3" fill="#E040FB" opacity="0.3"/>
    <ellipse cx="50" cy="42" rx="10" ry="3" fill="#E040FB" opacity="0.3"/>
  
    <g fill="white" stroke="#689f2e" stroke-width="0.3">
      <path d="M38,38 L40,34 L42,38"/>
      <path d="M44,38 L46,33 L48,38"/>
      <path d="M50,38 L52,32 L54,38"/>
      <path d="M56,38 L58,33 L60,38"/>
      <path d="M38,38 L40,42 L42,38"/>
      <path d="M44,38 L46,43 L48,38"/>
      <path d="M50,38 L52,44 L54,38"/>
      <path d="M56,38 L58,43 L60,38"/>
    </g>
  
        <path d="M41.6,37.2 L38.8,36.4" stroke="#8bc251" stroke-width="1.5" fill="none" stroke-linecap="round" opacity="0.5"/>
        <path d="M58.4,36.8 L61.2,36" stroke="#8bc251" stroke-width="1.5" fill="none" stroke-linecap="round" opacity="0.5"/>
        <path d="M43,39.6 L40.2,39.2" stroke="#8bc251" stroke-width="1.5" fill="none" stroke-linecap="round" opacity="0.5"/>
        <path d="M57,40 L59.8,39.6" stroke="#8bc251" stroke-width="1.5" fill="none" stroke-linecap="round" opacity="0.5"/>
      
        <circle cx="45" cy="34" r="2.5" fill="white"/>
        <circle cx="55" cy="34" r="2.5" fill="white"/>
        <circle cx="44" cy="35" r="1.125" fill="#1a1a1a"/>
        <circle cx="54" cy="35" r="1.125" fill="#1a1a1a"/>
        <circle cx="43.5" cy="33" r="0.625" fill="white"/>
        <circle cx="53.5" cy="33" r="0.625" fill="white"/>
        <ellipse cx="48" cy="35.5" rx="1.5" ry="0.75" fill="#FFB6C1" opacity="0.4"/>
        <ellipse cx="52" cy="35.5" rx="1.5" ry="0.75" fill="#FFB6C1" opacity="0.4"/>
      
        <path d="M48,40 Q50,42 52,40" stroke="#5D4037" stroke-width="0.7" fill="none" stroke-linecap="round"/>
      </g>
        <g opacity="0.3">
          <ellipse cx="20" cy="90" rx="6" ry="2" fill="#5D4037"/>
          <ellipse cx="80" cy="88" rx="5" ry="1.5" fill="#5D4037"/>
          <ellipse cx="12" cy="86" rx="3" ry="1" fill="#795548"/>
          <ellipse cx="88" cy="92" rx="4" ry="1.2" fill="#795548"/>
          <circle cx="16" cy="88" r="1.5" fill="#6D4C41"/>
          <circle cx="84" cy="90" r="1" fill="#6D4C41"/>
        </g>
      </g>
  </svg>"
`;

exports[`SVG snapshots > robots theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#2c3e50"/>
    <g>
    <g transform="translate(50, 50) scale(0.85) translate(-50, -50)">
      
    
        <line x1="50" y1="18" x2="50" y2="6" stroke="#3498db" stroke-width="3"/>
        <circle cx="50" cy="4" r="4" fill="#3498db"/>
        <circle cx="50" cy="4" r="2" fill="#5cc0ff"/>
      
    
    <rect x="5" y="37" width="10" height="16" rx="2" fill="#95a5a6"/>
    <rect x="85" y="37" width="10" height="16" rx="2" fill="#95a5a6"/>
    <rect x="7" y="39" width="6" height="12" rx="1" fill="#778788" opacity="0.5"/>
    <rect x="87" y="39" width="6" height="12" rx="1" fill="#778788" opacity="0.5"/>
    <circle cx="10" cy="45" r="2" fill="#3498db"/>
    <circle cx="90" cy="45" r="2" fill="#3498db"/>
  
    
        <rect x="18" y="18" width="64" height="64" rx="8" fill="#95a5a6"/>
        <rect x="22" y="22" width="56" height="56" rx="6" fill="#7c8c8d" opacity="0.3"/>
        <rect x="22" y="22" width="56" height="8" fill="#b3c3c4" opacity="0.5"/>
      
    
        <circle cx="35" cy="42" r="10" fill="#1a1a2e"/>
        <circle cx="65" cy="42" r="10" fill="#1a1a2e"/>
        <circle cx="35" cy="42" r="6" fill="#e74c3c"/>
        <circle cx="65" cy="42" r="6" fill="#e74c3c"/>
        <circle cx="33" cy="40" r="2" fill="#ff7464"/>
        <circle cx="63" cy="40" r="2" fill="#ff7464"/>
      
    
        <rect x="32" y="65" width="36" height="12" rx="2" fill="#1a1a2e"/>
        <line x1="35" y1="67" x2="35" y2="75" stroke="#3498db" stroke-width="2"/>
        <line x1="42" y1="67" x2="42" y2="75" stroke="#3498db" stroke-width="2"/>
        <line x1="50" y1="67" x2="50" y2="75" stroke="#3498db" stroke-width="2"/>
        <line x1="58" y1="67" x2="58" y2="75" stroke="#3498db" stroke-width="2"/>
        <line x1="65" y1="67" x2="65" y2="75" stroke="#3498db" stroke-width="2"/>
      
    
      <circle cx="25" cy="25" r="3" fill="#778788"/>
      <circle cx="75" cy="25" r="3" fill="#778788"/>
      <circle cx="25" cy="75" r="3" fill="#778788"/>
      <circle cx="75" cy="75" r="3" fill="#778788"/>
    
  
    </g>
  </g>
  </svg>"
`;

exports[`SVG snapshots > robots theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#6dd7df"/>
    <g>
    <g transform="translate(50, 50) scale(0.85) translate(-50, -50)">
      
    
        <line x1="35" y1="8" x2="35" y2="-2" stroke="#e515bb" stroke-width="2"/>
        <circle cx="35" cy="-4" r="3" fill="#e515bb"/>
        <line x1="65" y1="8" x2="65" y2="-2" stroke="#e515bb" stroke-width="2"/>
        <circle cx="65" cy="-4" r="3" fill="#e515bb"/>
      
    
    <rect x="5" y="32" width="10" height="16" rx="2" fill="#9b59b6"/>
    <rect x="85" y="32" width="10" height="16" rx="2" fill="#9b59b6"/>
    <rect x="7" y="34" width="6" height="12" rx="1" fill="#7d3b98" opacity="0.5"/>
    <rect x="87" y="34" width="6" height="12" rx="1" fill="#7d3b98" opacity="0.5"/>
    <circle cx="10" cy="40" r="2" fill="#e515bb"/>
    <circle cx="90" cy="40" r="2" fill="#e515bb"/>
  
    
        <rect x="22" y="8" width="56" height="80" rx="10" fill="#9b59b6"/>
        <rect x="26" y="12" width="48" height="72" rx="8" fill="#82409d" opacity="0.3"/>
        <rect x="26" y="12" width="48" height="10" fill="#b977d4" opacity="0.5"/>
      
    
        <rect x="28" y="29" width="12" height="12" rx="2" fill="#1a1a2e"/>
        <rect x="60" y="29" width="12" height="12" rx="2" fill="#1a1a2e"/>
        <rect x="30" y="31" width="8" height="8" fill="#68f3b4"/>
        <rect x="62" y="31" width="8" height="8" fill="#68f3b4"/>
        <rect x="30" y="31" width="8" height="2" fill="#90ffdc"/>
        <rect x="62" y="31" width="8" height="2" fill="#90ffdc"/>
      
    
        <circle cx="35" cy="71" r="4" fill="#e515bb"/>
        <circle cx="50" cy="71" r="4" fill="#e515bb"/>
        <circle cx="65" cy="71" r="4" fill="#e515bb"/>
      
    
      <circle cx="30" cy="15" r="3" fill="#7d3b98"/>
      <circle cx="70" cy="15" r="3" fill="#7d3b98"/>
      <circle cx="30" cy="80" r="3" fill="#7d3b98"/>
      <circle cx="70" cy="80" r="3" fill="#7d3b98"/>
    
  
    </g>
  </g>
  </svg>"
`;

exports[`SVG snapshots > robots theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#b99f2d"/>
    <g>
    <g transform="translate(50, 50) scale(0.85) translate(-50, -50)">
      
    
        <path d="M45,-7 L50,0 L45,0 L50,8" fill="#c6a953"/>
        <path d="M55,-7 L50,0 L55,0 L50,8" fill="#c6a953" transform="scale(-1,1) translate(-100,0)"/>
      
    
    <rect x="5" y="32" width="10" height="16" rx="2" fill="#5d6d7e"/>
    <rect x="85" y="32" width="10" height="16" rx="2" fill="#5d6d7e"/>
    <rect x="7" y="34" width="6" height="12" rx="1" fill="#3f4f60" opacity="0.5"/>
    <rect x="87" y="34" width="6" height="12" rx="1" fill="#3f4f60" opacity="0.5"/>
    <circle cx="10" cy="40" r="2" fill="#c6a953"/>
    <circle cx="90" cy="40" r="2" fill="#c6a953"/>
  
    
        <rect x="22" y="8" width="56" height="80" rx="10" fill="#5d6d7e"/>
        <rect x="26" y="12" width="48" height="72" rx="8" fill="#445465" opacity="0.3"/>
        <rect x="26" y="12" width="48" height="10" fill="#7b8b9c" opacity="0.5"/>
      
    
        <polygon points="25,30 45,25 45,40 25,40" fill="#1a1a2e"/>
        <polygon points="75,30 55,25 55,40 75,40" fill="#1a1a2e"/>
        <circle cx="35" cy="35" r="5" fill="#e65156"/>
        <circle cx="65" cy="35" r="5" fill="#e65156"/>
      
    
        <path d="M30,70 L38,65 L46,75 L54,65 L62,75 L70,70" stroke="#c6a953" stroke-width="3" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
      
    
      <circle cx="30" cy="15" r="3" fill="#3f4f60"/>
      <circle cx="70" cy="15" r="3" fill="#3f4f60"/>
      <circle cx="30" cy="80" r="3" fill="#3f4f60"/>
      <circle cx="70" cy="80" r="3" fill="#3f4f60"/>
    <rect x="30" y="75" width="40" height="8" rx="2" fill="#3f4f60"/><circle cx="50" cy="79" r="2" fill="#c6a953"/>
  
    </g>
  </g>
  </svg>"
`;

exports[`SVG snapshots > weather theme > generates expected SVG with default params 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <circle cx="50" cy="50" r="50" fill="#E3F2FD"/>
    <g><g transform="translate(50, 50) scale(0.76) translate(-50, -50)">
    <circle cx="50" cy="50" r="28" fill="#FF8F00" opacity="0.15"/>
  
    <g fill="#FFF9C4" opacity="0.6">
      <polygon points="50,10 46,22 54,22"/>
      <polygon points="50,90 46,78 54,78"/>
      <polygon points="10,50 22,46 22,54"/>
      <polygon points="90,50 78,46 78,54"/>
      <polygon points="22,22 30,28 28,30"/>
      <polygon points="78,22 72,28 70,30"/>
      <polygon points="22,78 28,70 30,72"/>
      <polygon points="78,78 70,72 72,70"/>
    </g>
  
    <circle cx="50" cy="50" r="18" fill="#FFD54F" stroke="#ebc13b" stroke-width="0.6"/>
    <circle cx="46" cy="44" r="5" fill="#ffe45e" opacity="0.2"/>
  
        <circle cx="44" cy="48" r="2.5" fill="white"/>
        <circle cx="56" cy="48" r="2.5" fill="white"/>
        <circle cx="44" cy="49" r="1.125" fill="#1a1a1a"/>
        <circle cx="56" cy="49" r="1.125" fill="#1a1a1a"/>
        <circle cx="43" cy="47" r="0.625" fill="white"/>
        <circle cx="55" cy="47" r="0.625" fill="white"/>
      
        <path d="M47,54 Q50,58 53,54" stroke="#5D4037" stroke-width="0.8" fill="none" stroke-linecap="round"/>
      </g></g>
  </svg>"
`;

exports[`SVG snapshots > weather theme > generates expected SVG with seed "john@example.com" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" fill="#FCE4EC"/>
    <g><g transform="translate(50, 50) scale(0.78) translate(-50, -50)">
    <rect x="26" y="52" width="48" height="14" rx="7" fill="#B0BEC5" stroke="#a1afb6" stroke-width="0.5"/>
    <circle cx="36" cy="46" r="14" fill="#B0BEC5" stroke="#a1afb6" stroke-width="0.5"/>
    <circle cx="54" cy="42" r="16" fill="#B0BEC5" stroke="#a1afb6" stroke-width="0.5"/>
    <circle cx="66" cy="50" r="12" fill="#B0BEC5" stroke="#a1afb6" stroke-width="0.5"/>
    <rect x="26" y="50" width="48" height="16" fill="#B0BEC5"/>
  
    <circle cx="38" cy="42" r="4" fill="#fffff1" opacity="0.2"/>
    <circle cx="56" cy="38" r="5" fill="#fffff1" opacity="0.15"/>
  
        <g opacity="0.2">
          <circle cx="43.4" cy="47.2" r="1.2" fill="#92a0a7"/>
          <circle cx="55.5" cy="47.9" r="1" fill="#92a0a7"/>
          <circle cx="47.8" cy="52.8" r="1.3" fill="#92a0a7"/>
          <circle cx="57.7" cy="51.4" r="0.9" fill="#92a0a7"/>
        </g>
      
        <circle cx="42" cy="52" r="2.5" fill="white"/>
        <circle cx="58" cy="52" r="2.5" fill="white"/>
        <circle cx="42" cy="53" r="1.125" fill="#1a1a1a"/>
        <circle cx="58" cy="53" r="1.125" fill="#1a1a1a"/>
        <circle cx="41" cy="51" r="0.625" fill="white"/>
        <circle cx="57" cy="51" r="0.625" fill="white"/>
      
        <path d="M47,58 Q50,62 53,58" stroke="#5D4037" stroke-width="0.8" fill="none" stroke-linecap="round"/>
      </g>
        <g opacity="0.3">
          <path d="M16,20 Q15,16 16,14 Q17,16 16,20 Z" fill="#90CAF9"/>
          <path d="M84,24 Q83,20 84,18 Q85,20 84,24 Z" fill="#90CAF9"/>
          <path d="M20,78 Q19,74 20,72 Q21,74 20,78 Z" fill="#90CAF9"/>
          <path d="M80,82 Q79,78 80,76 Q81,78 80,82 Z" fill="#90CAF9"/>
          <path d="M14,50 Q13,46 14,44 Q15,46 14,50 Z" fill="#90CAF9"/>
          <path d="M86,54 Q85,50 86,48 Q87,50 86,54 Z" fill="#90CAF9"/>
        </g>
      </g>
  </svg>"
`;

exports[`SVG snapshots > weather theme > generates expected SVG with seed "test-user-123" 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100" height="100">
    <rect width="100" height="100" rx="15" fill="#E8EAF6"/>
    <g><g transform="translate(50, 50) scale(0.76) translate(-50, -50)">
    <circle cx="42" cy="26" r="8" fill="#FFF9C4" stroke="#f5efba" stroke-width="0.4"/>
    <circle cx="54" cy="24" r="10" fill="#FFF9C4" stroke="#f5efba" stroke-width="0.4"/>
    <circle cx="62" cy="28" r="7" fill="#FFF9C4" stroke="#f5efba" stroke-width="0.4"/>
    <rect x="36" y="28" width="30" height="8" fill="#FFF9C4"/>
  
    <path d="M54,34 L44,52 L52,52 L42,74" stroke="#FFD54F" stroke-width="6" fill="none" opacity="0.15" stroke-linecap="round" stroke-linejoin="round"/>
  
    <path d="M54,34 L44,52 L52,52 L42,74" fill="none" stroke="#B39DDB" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
    <path d="M54,34 L44,52 L52,52 L42,74" fill="none" stroke="#c7b1ef" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
  
    <g fill="#B39DDB" opacity="0.5">
      <circle cx="38" cy="60" r="1" />
      <circle cx="56" cy="44" r="1.2" />
      <circle cx="36" cy="70" r="0.8" />
    </g>
  
        <g opacity="0.15" stroke="#957fbd" stroke-width="1" stroke-linecap="round">
          <line x1="44" y1="50" x2="52" y2="50"/>
          <line x1="44.5" y1="54" x2="51.5" y2="54"/>
          <line x1="45" y1="58" x2="51" y2="58"/>
        </g>
      
        <path d="M41.5,56 Q44,53 46.5,56" stroke="#1a1a1a" stroke-width="1.2" fill="none" stroke-linecap="round"/>
        <path d="M51.5,56 Q54,53 56.5,56" stroke="#1a1a1a" stroke-width="1.2" fill="none" stroke-linecap="round"/>
        <ellipse cx="47" cy="57" rx="1.5" ry="0.75" fill="#FFB6C1" opacity="0.4"/>
        <ellipse cx="51" cy="57" rx="1.5" ry="0.75" fill="#FFB6C1" opacity="0.4"/>
      
        <ellipse cx="53" cy="63" rx="2.5" ry="2" fill="#5D4037" opacity="0.6"/>
        <path d="M55,62 Q59,63 61,61" stroke="#90CAF9" stroke-width="0.8" fill="none" opacity="0.4" stroke-linecap="round"/>
      </g>
        <g opacity="0.3">
          <path d="M16,20 Q15,16 16,14 Q17,16 16,20 Z" fill="#90CAF9"/>
          <path d="M84,24 Q83,20 84,18 Q85,20 84,24 Z" fill="#90CAF9"/>
          <path d="M20,78 Q19,74 20,72 Q21,74 20,78 Z" fill="#90CAF9"/>
          <path d="M80,82 Q79,78 80,76 Q81,78 80,82 Z" fill="#90CAF9"/>
          <path d="M14,50 Q13,46 14,44 Q15,46 14,50 Z" fill="#90CAF9"/>
          <path d="M86,54 Q85,50 86,48 Q87,50 86,54 Z" fill="#90CAF9"/>
        </g>
      </g>
  </svg>"
`;

exports[`generateParams determinism > aliens params are deterministic with seed 1`] = `
{
  "antennae": "curved",
  "backgroundColor": "#0f3460",
  "backgroundShape": "rounded",
  "eyeColor": "#1a1a2e",
  "eyeStyle": "large",
  "headShape": "bulbous",
  "markings": "spots",
  "mouthStyle": "slit",
  "skinColor": "#2ecc71",
}
`;

exports[`generateParams determinism > animals params are deterministic with seed 1`] = `
{
  "animalType": "bear",
  "backgroundColor": "#cd2da2",
  "backgroundShape": "rounded",
  "expression": "sleepy",
  "eyeColor": "#aae534",
  "primaryColor": "#2b7abf",
  "secondaryColor": "#ffffff",
}
`;

exports[`generateParams determinism > birds params are deterministic with seed 1`] = `
{
  "backgroundColor": "#FFF3E0",
  "backgroundShape": "rounded",
  "birdType": "penguin",
  "crestColor": "#2196F3",
  "decoration": "clouds",
  "expression": "sleepy",
  "eyeColor": "#212121",
  "pattern": "none",
  "primaryColor": "#43A047",
  "secondaryColor": "#E0F7FA",
}
`;

exports[`generateParams determinism > dinosaurs params are deterministic with seed 1`] = `
{
  "backgroundColor": "#7a6652",
  "backgroundShape": "rounded",
  "dinosaurType": "stegosaurus",
  "expression": "sleepy",
  "eyeColor": "#f1c40f",
  "hasPlants": "yes",
  "pattern": "plates",
  "primaryColor": "#6b8e23",
  "secondaryColor": "#ffffff",
}
`;

exports[`generateParams determinism > food params are deterministic with seed 1`] = `
{
  "backgroundColor": "#FFE0B2",
  "backgroundShape": "rounded",
  "decoration": "sparkles",
  "expression": "happy",
  "eyeColor": "#212121",
  "foodType": "cupcake",
  "pattern": "sesame",
  "plateColor": "#ECEFF1",
  "primaryColor": "#FF8A65",
  "secondaryColor": "#FFF3E0",
  "toppingColor": "#F9A825",
}
`;

exports[`generateParams determinism > gems params are deterministic with seed 1`] = `
{
  "backgroundColor": "#004D40",
  "backgroundShape": "rounded",
  "decoration": "glowring",
  "expression": "happy",
  "eyeColor": "#212121",
  "facetColor": "#FFE082",
  "gemType": "emerald",
  "pattern": "inclusions",
  "primaryColor": "#B3E5FC",
  "secondaryColor": "#FFF9C4",
  "sparkleColor": "#FFF9C4",
}
`;

exports[`generateParams determinism > insects params are deterministic with seed 1`] = `
{
  "backgroundColor": "#F3E5F5",
  "backgroundShape": "rounded",
  "decoration": "flowers",
  "expression": "sleepy",
  "eyeColor": "#1a1a1a",
  "insectType": "ladybug",
  "pattern": "none",
  "primaryColor": "#4CAF50",
  "secondaryColor": "#F5F5F5",
  "wingColor": "#B39DDB",
}
`;

exports[`generateParams determinism > monsters params are deterministic with seed 1`] = `
{
  "backgroundColor": "#722ead",
  "backgroundShape": "rounded",
  "bodyColor": "#b4843c",
  "bodyShape": "tall",
  "expression": "surprised",
  "eyeColor": "#ffffff",
  "eyeCount": 5,
  "hasHorns": "spikes",
  "hasTeeth": "yes",
  "mouthColor": "#ef5725",
}
`;

exports[`generateParams determinism > mythical params are deterministic with seed 1`] = `
{
  "backgroundColor": "#161625",
  "backgroundShape": "rounded",
  "creatureType": "phoenix",
  "expression": "mysterious",
  "eyeColor": "#ff6b6b",
  "magic": "none",
  "pattern": "scales",
  "primaryColor": "#7b2d8e",
  "secondaryColor": "#ffffff",
}
`;

exports[`generateParams determinism > ocean params are deterministic with seed 1`] = `
{
  "backgroundColor": "#0d4f6e",
  "backgroundShape": "rounded",
  "creatureType": "jellyfish",
  "expression": "grumpy",
  "eyeColor": "#ffffff",
  "hasBubbles": "yes",
  "pattern": "scales",
  "primaryColor": "#3498db",
  "secondaryColor": "#e8f8f5",
}
`;

exports[`generateParams determinism > people params are deterministic with seed 1`] = `
{
  "accessory": "earrings",
  "backgroundColor": "#c7d846",
  "backgroundShape": "rounded",
  "expression": "neutral",
  "eyeColor": "#f14190",
  "hairColor": "#2c1810",
  "hairStyle": "curly",
  "skinColor": "#f5d0c5",
}
`;

exports[`generateParams determinism > plants params are deterministic with seed 1`] = `
{
  "backgroundColor": "#DCEDC8",
  "backgroundShape": "rounded",
  "bloomColor": "#E91E63",
  "decoration": "dewdrops",
  "expression": "happy",
  "eyeColor": "#1B5E20",
  "pattern": "stripes",
  "plantType": "rose",
  "potColor": "#BCAAA4",
  "primaryColor": "#4CAF50",
  "secondaryColor": "#AED581",
}
`;

exports[`generateParams determinism > robots params are deterministic with seed 1`] = `
{
  "accentColor": "#2b7abf",
  "antennaStyle": "double",
  "backgroundColor": "#cd2da2",
  "backgroundShape": "rounded",
  "bodyColor": "#95a5a6",
  "eyeColor": "#aae534",
  "eyeStyle": "angry",
  "hasPanel": "yes",
  "headShape": "wide",
  "mouthStyle": "grille",
  "panelLights": 2,
}
`;

exports[`generateParams determinism > weather params are deterministic with seed 1`] = `
{
  "backgroundColor": "#E8EAF6",
  "backgroundShape": "rounded",
  "decoration": "windlines",
  "expression": "happy",
  "eyeColor": "#212121",
  "glowColor": "#FFF9C4",
  "pattern": "dots",
  "precipitationColor": "#90CAF9",
  "primaryColor": "#FFD54F",
  "secondaryColor": "#FFFFFF",
  "weatherType": "raindrop",
}
`;
